更新: 初次内容校对

--- a/changelogs/0.10.0-changelog.md
+++ b/changelogs/0.10.0-changelog.md
@@ -4,24 +4,24 @@
 
 ### 重大变更
 
-- [＃1843](https://github.com/ManimCommunity/manim/pull/1843)：删除多余的 OpenGL 文件并添加元类支持[`Surface`](../reference/manim.mobject.three_d.three_dimensions.Surface.html#manim.mobject.three_d.three_dimensions.Surface "manim.mobject. Three_d. Three_dimensions.Surface")
+- [＃1843](https://github.com/ManimCommunity/manim/pull/1843)：删除多余的 OpenGL 文件并添加元类支持[`Surface`]()
 
   - ` OpenGL<x>``opengl_geometry.py `、`opengl_text_mobject.py`、`opengl_tex_mobject.py`、`opengl_svg_path.py`和中的类`opengl_svg_mobject.py`大部分`opengl_three_dimensions.py`已被删除。
-  - `ParametricSurface`已更名为[`Surface`](../reference/manim.mobject.three_d.three_dimensions.Surface.html#manim.mobject.three_d.three_dimensions.Surface "manim.mobject. Three_d. Three_dimensions.Surface")
+  - `ParametricSurface`已更名为[`Surface`]()
 
 ### 已弃用的类和函数
 
-- [＃1941](https://github.com/ManimCommunity/manim/pull/1941)：添加了示例、测试和改进的文档[`coordinate_systems`](../reference/manim.mobject.graphing.coordinate_systems.html#module-manim.mobject.graphing.coordinate_systems "manim.mobject.graphing.coordinate_systems")
-- [#1694](https://github.com/ManimCommunity/manim/pull/1694) : 添加了和 的`font_size`参数，将参数替换为[`Tex`](../reference/manim.mobject.text.tex_mobject.Tex.html#manim.mobject.text.tex_mobject.Tex "manim.mobject.text.tex_mobject.Tex")[`Text`](../reference/manim.mobject.text.text_mobject.Text.html#manim.mobject.text.text_mobject.Text "manim.mobject.text.text_mobject.Text")` scale``font_size `
-- [#1860](https://github.com/ManimCommunity/manim/pull/1860)：删除了`GraphScene`，`NumberLineOld`以及参数[`ChangingDecimal`](../reference/manim.animation.numbers.ChangingDecimal.html#manim.animation.numbers.ChangingDecimal "manim.animation.numbers.ChangingDecimal")
+- [＃1941](https://github.com/ManimCommunity/manim/pull/1941)：添加了示例、测试和改进的文档[`coordinate_systems`]()
+- [#1694](https://github.com/ManimCommunity/manim/pull/1694) : 添加了和 的`font_size`参数，将参数替换为[`Tex`]()[`Text`]()` scale``font_size `
+- [#1860](https://github.com/ManimCommunity/manim/pull/1860)：删除了`GraphScene`，`NumberLineOld`以及参数[`ChangingDecimal`]()
 
 ### 新功能
 
-- [＃1929](https://github.com/ManimCommunity/manim/pull/1929)：实现`zoom`参数[`ThreeDScene.move_camera()`](../reference/manim.scene.three_d_scene.ThreeDScene.html#manim.scene.three_d_scene.ThreeDScene.move_camera "manim.scene. Three_d_scene.ThreeDScene.move_camera")
+- [＃1929](https://github.com/ManimCommunity/manim/pull/1929)：实现`zoom`参数[`ThreeDScene.move_camera()`]()
 
-  [`ThreeDScene`](../reference/manim.scene.three_d_scene.ThreeDScene.html#manim.scene.three_d_scene.ThreeDScene "manim.scene. Three_d_scene.ThreeDScene")现在可以通过调用例如`self.move_camera(zoom=2)`方法来完成放大 a `construct`。
+  [`ThreeDScene`]()现在可以通过调用例如`self.move_camera(zoom=2)`方法来完成放大 a `construct`。
 
-- [＃1980](https://github.com/ManimCommunity/manim/pull/1980)：添加了一个`dissipating_time`关键字参数以[`TracedPath`](../reference/manim.animation.changing.TracedPath.html#manim.animation.changing.TracedPath "manim.animation.having.TracedPath")允许对耗散路径进行动画处理
+- [＃1980](https://github.com/ManimCommunity/manim/pull/1980)：添加了一个`dissipating_time`关键字参数以[`TracedPath`]()允许对耗散路径进行动画处理
 - [#1899](https://github.com/ManimCommunity/manim/pull/1899)：允许在运行时将渲染器切换到 OpenGL
 
   以前，元类方法仅在类对象初始化时（即导入时）更改继承链以在 OpenGL 和 cairo mobject 之间切换。`config.renderer`当 的值发生变化时，该 PR 也会触发继承链的变化。
@@ -30,8 +30,8 @@
 
 ### 增强功能
 
-- [#1882](https://github.com/ManimCommunity/manim/pull/1882)：添加了对其[`PMobject`](../reference/manim.mobject.types.point_cloud_mobject.PMobject.html#manim.mobject.types.point_cloud_mobject.PMobject "manim.mobject.types.point_cloud_mobject.PMobject")及其子类的 OpenGL 支持
-- [＃1881](https://github.com/ManimCommunity/manim/pull/1881)：添加了方法[`Angle.get_lines()`](../reference/manim.mobject.geometry.line.Angle.html#manim.mobject.geometry.line.Angle.get_lines "manim.mobject.geometry.line.Angle.get_lines")和[`Angle.get_value()`](../reference/manim.mobject.geometry.line.Angle.html#manim.mobject.geometry.line.Angle.get_value "manim.mobject.geometry.line.Angle.get_value")[`Angle`](../reference/manim.mobject.geometry.line.Angle.html#manim.mobject.geometry.line.Angle "manim.mobject.geometry.line.Angle")
+- [#1882](https://github.com/ManimCommunity/manim/pull/1882)：添加了对其[`PMobject`]()及其子类的 OpenGL 支持
+- [＃1881](https://github.com/ManimCommunity/manim/pull/1881)：添加了方法[`Angle.get_lines()`]()和[`Angle.get_value()`]()[`Angle`]()
 - [#1952](https://github.com/ManimCommunity/manim/pull/1952)：添加了保存 OpenGL 最后一帧的选项
 - [#1922](https://github.com/ManimCommunity/manim/pull/1922) : 修复了 IPython 接口，以便在 OpenGL 渲染器引发错误时干净退出
 - [#1923](https://github.com/ManimCommunity/manim/pull/1923)：修复了子命令的 CLI 帮助文本，使其不会被截断`manim init`
@@ -39,25 +39,25 @@
 
   使用 magic 命令时，OpenGL 渲染器现在可以在 jupyter 笔记本中使用`%%manim`。
 
-- [＃1841](https://github.com/ManimCommunity/manim/pull/1841)：降低默认分辨率[`Dot3D`](../reference/manim.mobject.three_d.three_dimensions.Dot3D.html#manim.mobject.three_d.three_dimensions.Dot3D "manim.mobject. Three_d. Three_dimensions.Dot3D")
-- [＃1866](https://github.com/ManimCommunity/manim/pull/1866)：允许将关键字参数传递`corner_radius`给[`SurroundingRectangle`](../reference/manim.mobject.geometry.shape_matchers.SurroundingRectangle.html#manim.mobject.geometry.shape_matchers.SurroundingRectangle "manim.mobject.geometry.shape_matchers.SurroundingRectangle")
-- [＃1847](https://github.com/ManimCommunity/manim/pull/1847)：允许[`Cross`](../reference/manim.mobject.geometry.shape_matchers.Cross.html#manim.mobject.geometry.shape_matchers.Cross "manim.mobject.geometry.shape_matchers.Cross")在不需要 mobject 的情况下创建
+- [＃1841](https://github.com/ManimCommunity/manim/pull/1841)：降低默认分辨率[`Dot3D`]()
+- [＃1866](https://github.com/ManimCommunity/manim/pull/1866)：允许将关键字参数传递`corner_radius`给[`SurroundingRectangle`]()
+- [＃1847](https://github.com/ManimCommunity/manim/pull/1847)：允许[`Cross`]()在不需要 mobject 的情况下创建
 
 ### 修复了错误
 
 - [#1985](https://github.com/ManimCommunity/manim/pull/1985) : 使用`height`确定`font_size`代替`_font_size`属性
 - [#1758](https://github.com/ManimCommunity/manim/pull/1758)：修复了使用 OpenGL 渲染器时忽略的场景选择
-- [＃1871](https://github.com/ManimCommunity/manim/pull/1871)：修复破损[`VectorScene.vector_to_coords()`](../reference/manim.scene.vector_space_scene.VectorScene.html#manim.scene.vector_space_scene.VectorScene.vector_to_coords "manim.scene.vector_space_scene.VectorScene.vector_to_coords")
-- [＃1973](https://github.com/ManimCommunity/manim/pull/1973)：固定索引[`Table.get_entries()`](../reference/manim.mobject.table.Table.html#manim.mobject.table.Table.get_entries "manim.mobject.table.Table.get_entries")以尊重行长度
-- [＃1950](https://github.com/ManimCommunity/manim/pull/1950)：修复了将自定义箭头形状传递给[`CurvedArrow`](../reference/manim.mobject.geometry.arc.CurvedArrow.html#manim.mobject.geometry.arc.CurvedArrow "manim.mobject.geometry.arc.CurvedArrow")
+- [＃1871](https://github.com/ManimCommunity/manim/pull/1871)：修复破损[`VectorScene.vector_to_coords()`]()
+- [＃1973](https://github.com/ManimCommunity/manim/pull/1973)：固定索引[`Table.get_entries()`]()以尊重行长度
+- [＃1950](https://github.com/ManimCommunity/manim/pull/1950)：修复了将自定义箭头形状传递给[`CurvedArrow`]()
 - [＃1967](https://github.com/ManimCommunity/manim/pull/1967)：修复了`Axes.coordinate_labels`整个轴的引用，而不仅仅是其标签
 - [＃1951](https://github.com/ManimCommunity/manim/pull/1951)：修复`Axes.get_line_graph()`返回轴下方渲染的图表
-- [＃1943](https://github.com/ManimCommunity/manim/pull/1943)：添加`buff`关键字参数[`BraceLabel`](../reference/manim.mobject.svg.brace.BraceLabel.html#manim.mobject.svg.brace.BraceLabel "manim.mobject.svg.brace.BraceLabel")
-- [＃1938](https://github.com/ManimCommunity/manim/pull/1938)：修复了[`Rotate`](../reference/manim.animation.rotation.Rotate.html#manim.animation.rotation.Rotate "manim.animation.rotation.Rotate")倍数的角度 2π
+- [＃1943](https://github.com/ManimCommunity/manim/pull/1943)：添加`buff`关键字参数[`BraceLabel`]()
+- [＃1938](https://github.com/ManimCommunity/manim/pull/1938)：修复了[`Rotate`]()倍数的角度 2π
 - [＃1924](https://github.com/ManimCommunity/manim/pull/1924)：使箭头尖端旋转`IN`并`OUT`正确
-- [＃1931](https://github.com/ManimCommunity/manim/pull/1931)：`row_heights`修复[`Mobject.arrange_in_grid()`](../reference/manim.mobject.mobject.Mobject.html#manim.mobject.mobject.Mobject.arrange_in_grid "manim.mobject.mobject.Mobject.arrange_in_grid")
+- [＃1931](https://github.com/ManimCommunity/manim/pull/1931)：`row_heights`修复[`Mobject.arrange_in_grid()`]()
 - [#1893](https://github.com/ManimCommunity/manim/pull/1893)：修复了渲染包含单个场景的文件而不指定场景名称时的 CLI 错误
-- [＃1744](https://github.com/ManimCommunity/manim/pull/1744)：修复了和[`NumberPlane`](../reference/manim.mobject.graphing.coordinate_systems.NumberPlane.html#manim.mobject.graphing.coordinate_systems.NumberPlane "manim.mobject.graphing.coordinate_systems.NumberPlane")的严格正值或严格负值的错误` x_range``y_range `
+- [＃1744](https://github.com/ManimCommunity/manim/pull/1744)：修复了和[`NumberPlane`]()的严格正值或严格负值的错误` x_range``y_range `
 - [＃1887](https://github.com/ManimCommunity/manim/pull/1887)：修复了`custom_config`无法工作的问题`frames_comparison`
 - [＃1879](https://github.com/ManimCommunity/manim/pull/1879)：修复了如何通过 Poetry 确定安装的版本
 
@@ -67,13 +67,13 @@
 - [＃1976](https://github.com/ManimCommunity/manim/pull/1976)：修复了文档示例中的语言标签
 - [#1949](https://github.com/ManimCommunity/manim/pull/1949)：从头开始重写安装说明
 - [＃1963](https://github.com/ManimCommunity/manim/pull/1963)：添加站点地图`robots.txt`
-- [＃1939](https://github.com/ManimCommunity/manim/pull/1939)：修复了参数描述的格式[`NumberPlane`](../reference/manim.mobject.graphing.coordinate_systems.NumberPlane.html#manim.mobject.graphing.coordinate_systems.NumberPlane "manim.mobject.graphing.coordinate_systems.NumberPlane")
+- [＃1939](https://github.com/ManimCommunity/manim/pull/1939)：修复了参数描述的格式[`NumberPlane`]()
 - [＃1918](https://github.com/ManimCommunity/manim/pull/1918)：修复了文本教程中的拼写错误
 - [#1915](https://github.com/ManimCommunity/manim/pull/1915)：改进了 Google Colab 安装说明的措辞
 - [＃1906](https://github.com/ManimCommunity/manim/pull/1906)：改进了语言和整体一致性`README`
-- [＃1880](https://github.com/ManimCommunity/manim/pull/1880)：更新了教程以`.animate`代替[`ApplyMethod`](../reference/manim.animation.transform.ApplyMethod.html#manim.animation.transform.ApplyMethod "manim.animation.transform.ApplyMethod")
+- [＃1880](https://github.com/ManimCommunity/manim/pull/1880)：更新了教程以`.animate`代替[`ApplyMethod`]()
 - [＃1877](https://github.com/ManimCommunity/manim/pull/1877)：删除一些文档示例中的重复导入
-- [＃1869](https://github.com/ManimCommunity/manim/pull/1869)：修复了重复的参数部分 [`Mobject.arrange_in_grid()`](../reference/manim.mobject.mobject.Mobject.html#manim.mobject.mobject.Mobject.arrange_in_grid "manim.mobject.mobject.Mobject.arrange_in_grid")
+- [＃1869](https://github.com/ManimCommunity/manim/pull/1869)：修复了重复的参数部分 [`Mobject.arrange_in_grid()`]()
 
 ### 有关测试系统的更改
 
