--- a/changelogs/0.11.0-changelog.md
+++ b/changelogs/0.11.0-changelog.md
@@ -4,9 +4,9 @@
 
 ### 重大变更
 
-- [＃1990](https://github.com/ManimCommunity/manim/pull/1990)：更改和改进了[`CoordinateSystem.get_area()`](../reference/manim.mobject.graphing.coordinate_systems.CoordinateSystem.html#manim.mobject.graphing.coordinate_systems.CoordinateSystem.get_area "manim.mobject.graphing.coordinate_systems.CooperativeSystem.get_area")没有黎曼矩形的情况下工作的实现
+- [＃1990](https://github.com/ManimCommunity/manim/pull/1990)：更改和改进了[`CoordinateSystem.get_area()`]()没有黎曼矩形的情况下工作的实现
 
-  这改变了[`CoordinateSystem.get_area()`](../reference/manim.mobject.graphing.coordinate_systems.CoordinateSystem.html#manim.mobject.graphing.coordinate_systems.CoordinateSystem.get_area "manim.mobject.graphing.coordinate_systems.CooperativeSystem.get_area")实施方式。要模仿旧的行为（微小的黎曼矩形），请使用[`CoordinateSystem.get_riemann_rectangles()`](../reference/manim.mobject.graphing.coordinate_systems.CoordinateSystem.html#manim.mobject.graphing.coordinate_systems.CoordinateSystem.get_riemann_rectangles "manim.mobject.graphing.coordinate_systems.CooperativeSystem.get_riemann_rectangles")较小的 值`dx`。
+  这改变了[`CoordinateSystem.get_area()`]()实施方式。要模仿旧的行为（微小的黎曼矩形），请使用[`CoordinateSystem.get_riemann_rectangles()`]()较小的 值`dx`。
 
 - [＃2095](https://github.com/ManimCommunity/manim/pull/2095)：更改极坐标的角度以使用数学约定
 
@@ -14,53 +14,53 @@
 
 ### 亮点
 
-- [＃2094](https://github.com/ManimCommunity/manim/pull/2094)：实现[`ImplicitFunction`](../reference/manim.mobject.graphing.functions.ImplicitFunction.html#manim.mobject.graphing.functions.ImplicitFunction "manim.mobject.graphing.functions.ImplicitFunction")并`CoordinateSystem.get_implicit_curve()`用于绘制隐式曲线
+- [＃2094](https://github.com/ManimCommunity/manim/pull/2094)：实现[`ImplicitFunction`]()并`CoordinateSystem.get_implicit_curve()`用于绘制隐式曲线
 
-  [`ImplicitFunction`](../reference/manim.mobject.graphing.functions.ImplicitFunction.html#manim.mobject.graphing.functions.ImplicitFunction "manim.mobject.graphing.functions.ImplicitFunction")绘制点的(x,y)满足某个方程 f(x,y)=0。
+  [`ImplicitFunction`]()绘制点的(x,y)满足某个方程 f(x,y)=0。
 
-- [#2075](https://github.com/ManimCommunity/manim/pull/2075)：实现了[`Mobject.set_default()`](../reference/manim.mobject.mobject.Mobject.html#manim.mobject.mobject.Mobject.set_default "manim.mobject.mobject.Mobject.set_default")一种更改关键字参数默认值的机制
+- [#2075](https://github.com/ManimCommunity/manim/pull/2075)：实现了[`Mobject.set_default()`]()一种更改关键字参数默认值的机制
 - [#1998](https://github.com/ManimCommunity/manim/pull/1998)：添加了对 VMobjects 布尔运算的支持
 
-  此 PR 介绍了布尔运算[`VMobject`](../reference/manim.mobject.types.vectorized_mobject.VMobject.html#manim.mobject.types.vectorized_mobject.VMobject "manim.mobject.types.vectorized_mobject.VMobject")；[`Union`](../reference/manim.mobject.geometry.boolean_ops.Union.html#manim.mobject.geometry.boolean_ops.Union "manim.mobject.geometry.boolean_ops.Union")请参阅、[`Difference`](../reference/manim.mobject.geometry.boolean_ops.Difference.html#manim.mobject.geometry.boolean_ops.Difference "manim.mobject.geometry.boolean_ops.差异")和[`Intersection`](../reference/manim.mobject.geometry.boolean_ops.Intersection.html#manim.mobject.geometry.boolean_ops.Intersection "manim.mobject.geometry.boolean_ops.Intersection")处的详细信息和示例 [`Exclusion`](../reference/manim.mobject.geometry.boolean_ops.Exclusion.html#manim.mobject.geometry.boolean_ops.Exclusion "manim.mobject.geometry.boolean_ops.Exclusion")。
+  此 PR 介绍了布尔运算[`VMobject`]()；[`Union`]()请参阅、[`Difference`]()和[`Intersection`]()处的详细信息和示例 [`Exclusion`]()。
 
 ### 已弃用的类和函数
 
-- [#2123](https://github.com/ManimCommunity/manim/pull/2123) :将和 的`distance`参数重命名为[`ThreeDScene`](../reference/manim.scene.three_d_scene.ThreeDScene.html#manim.scene.three_d_scene.ThreeDScene "manim.scene. Three_d_scene.ThreeDScene")[`ThreeDCamera`](../reference/manim.camera.three_d_camera.ThreeDCamera.html#manim.camera.three_d_camera.ThreeDCamera "manim.camera. Three_d_camera.ThreeDCamera")`focal_distance`
+- [#2123](https://github.com/ManimCommunity/manim/pull/2123) :将和 的`distance`参数重命名为[`ThreeDScene`]()[`ThreeDCamera`]()`focal_distance`
 - [#2102](https://github.com/ManimCommunity/manim/pull/2102)：已弃用`SampleSpaceScene`并且`ReconfigurableScene`
-- [#2061](https://github.com/ManimCommunity/manim/pull/2061) : 删除了已弃用的`u_min`, `u_max`, `v_min`,`v_max`中[`Surface`](../reference/manim.mobject.three_d.three_dimensions.Surface.html#manim.mobject.three_d.three_dimensions.Surface "manim.mobject. Three_d. Three_dimensions.Surface")
+- [#2061](https://github.com/ManimCommunity/manim/pull/2061) : 删除了已弃用的`u_min`, `u_max`, `v_min`,`v_max`中[`Surface`]()
 - [#2024](https://github.com/ManimCommunity/manim/pull/2024) : 弃用冗余方法`Mobject.rotate_in_place()`, `Mobject.scale_in_place()`,`Mobject.scale_about_point()`
 - [#1991](https://github.com/ManimCommunity/manim/pull/1991)：已弃用`VMobject.get_points()`
 
 ### 新功能
 
-- [#2118](https://github.com/ManimCommunity/manim/pull/2118)：添加了 3D 支持[`ArrowVectorField`](../reference/manim.mobject.vector_field.ArrowVectorField.html#manim.mobject.vector_field.ArrowVectorField "manim.mobject.vector_field.ArrowVectorField")和[`StreamLines`](../reference/manim.mobject.vector_field.StreamLines.html#manim.mobject.vector_field.StreamLines "manim.mobject.vector_field.StreamLines")
-- [＃1469](https://github.com/ManimCommunity/manim/pull/1469)：添加[`VMobject.proportion_from_point()`](../reference/manim.mobject.types.vectorized_mobject.VMobject.html#manim.mobject.types.vectorized_mobject.VMobject.proportion_from_point "manim.mobject.types.vectorized_mobject.VMobject.proportion_from_point")用于测量贝塞尔曲线上的点的比例
+- [#2118](https://github.com/ManimCommunity/manim/pull/2118)：添加了 3D 支持[`ArrowVectorField`]()和[`StreamLines`]()
+- [＃1469](https://github.com/ManimCommunity/manim/pull/1469)：添加[`VMobject.proportion_from_point()`]()用于测量贝塞尔曲线上的点的比例
 
 ### 增强功能
 
 - [#2111](https://github.com/ManimCommunity/manim/pull/2111) : 改进了 OpenGL 颜色的设置
-- [#2113](https://github.com/ManimCommunity/manim/pull/2113)：添加了 OpenGL 兼容性[`ThreeDScene.begin_ambient_camera_rotation()`](../reference/manim.scene.three_d_scene.ThreeDScene.html#manim.scene.three_d_scene.ThreeDScene.begin_ambient_camera_rotation "manim.scene. Three_d_scene.ThreeDScene.begin_ambient_camera_rotation")和[`ThreeDScene.move_camera()`](../reference/manim.scene.three_d_scene.ThreeDScene.html#manim.scene.three_d_scene.ThreeDScene.move_camera "manim.scene. Three_d_scene.ThreeDScene.move_camera")
+- [#2113](https://github.com/ManimCommunity/manim/pull/2113)：添加了 OpenGL 兼容性[`ThreeDScene.begin_ambient_camera_rotation()`]()和[`ThreeDScene.move_camera()`]()
 - [#2016](https://github.com/ManimCommunity/manim/pull/2016) : 添加了 OpenGL 支持`boolean_ops`
 - [＃2084](https://github.com/ManimCommunity/manim/pull/2084)：添加`get_highlighted_cell()`并修复`add_highlighted_cell()`
-- [＃2013](https://github.com/ManimCommunity/manim/pull/2013)：删除了不必要的签入[`TransformMatchingAbstractBase`](../reference/manim.animation.transform_matching_parts.TransformMatchingAbstractBase.html#manim.animation.transform_matching_parts.TransformMatchingAbstractBase "manim.animation.transform_matching_parts.TransformMatchingAbstractBase")
-- [#1971](https://github.com/ManimCommunity/manim/pull/1971)：添加了 OpenGL 支持[`StreamLines`](../reference/manim.mobject.vector_field.StreamLines.html#manim.mobject.vector_field.StreamLines "manim.mobject.vector_field.StreamLines")
+- [＃2013](https://github.com/ManimCommunity/manim/pull/2013)：删除了不必要的签入[`TransformMatchingAbstractBase`]()
+- [#1971](https://github.com/ManimCommunity/manim/pull/1971)：添加了 OpenGL 支持[`StreamLines`]()
 - [#2041](https://github.com/ManimCommunity/manim/pull/2041)：添加了配置选项以启用 OpenGL 线框进行调试
 
 ### 修复了错误
 
 - [＃2070](https://github.com/ManimCommunity/manim/pull/2070)`get_frame()` ：创建窗口时修复
 - [#2071](https://github.com/ManimCommunity/manim/pull/2071)：修复了`AnimationGroup`OpenGL 兼容性
-- [＃2108](https://github.com/ManimCommunity/manim/pull/2108)：修复了交换轴步长值[`NumberPlane`](../reference/manim.mobject.graphing.coordinate_systems.NumberPlane.html#manim.mobject.graphing.coordinate_systems.NumberPlane "manim.mobject.graphing.coordinate_systems.NumberPlane")
-- [#2072](https://github.com/ManimCommunity/manim/pull/2072)：添加了 OpenGL 兼容性[`Cube`](../reference/manim.mobject.three_d.three_dimensions.Cube.html#manim.mobject.three_d.three_dimensions.Cube "manim.mobject. Three_d. Three_dimensions.Cube")。
+- [＃2108](https://github.com/ManimCommunity/manim/pull/2108)：修复了交换轴步长值[`NumberPlane`]()
+- [#2072](https://github.com/ManimCommunity/manim/pull/2072)：添加了 OpenGL 兼容性[`Cube`]()。
 - [＃2060](https://github.com/ManimCommunity/manim/pull/2060)：修复了方法的 OpenGL 兼容性问题：~Line.set_opacity
 - [＃2037](https://github.com/ManimCommunity/manim/pull/2037)：修复了返回值`apply_complex_function()`
 - [#2039](https://github.com/ManimCommunity/manim/pull/2039)：添加了 OpenGL 兼容性`add_bases()`。
 - [＃2066](https://github.com/ManimCommunity/manim/pull/2066)：修复了缓存已满时日志记录引发的错误
-- [#2026](https://github.com/ManimCommunity/manim/pull/2026) : 修复了 OpenGL 移位动画[`Text`](../reference/manim.mobject.text.text_mobject.Text.html#manim.mobject.text.text_mobject.Text "manim.mobject.text.text_mobject.Text")
+- [#2026](https://github.com/ManimCommunity/manim/pull/2026) : 修复了 OpenGL 移位动画[`Text`]()
 - [#2028](https://github.com/ManimCommunity/manim/pull/2028)：修复了 OpenGL 覆盖 SVG 填充颜色的问题
-- [＃2043](https://github.com/ManimCommunity/manim/pull/2043)[`NumberLine.add_labels()`](../reference/manim.mobject.graphing.number_line.NumberLine.html#manim.mobject.graphing.number_line.NumberLine.add_labels "manim.mobject.graphing.number_line.NumberLine.add_labels") ：修复了 无法接受非对象标签的错误
+- [＃2043](https://github.com/ManimCommunity/manim/pull/2043)[`NumberLine.add_labels()`]() ：修复了 无法接受非对象标签的错误
 - [#2011](https://github.com/ManimCommunity/manim/pull/2011)：修复了`-a`OpenGL 渲染的标志
-- [#1994](https://github.com/ManimCommunity/manim/pull/1994) : 修复[`input_to_graph_point()`](../reference/manim.mobject.graphing.coordinate_systems.CoordinateSystem.html#manim.mobject.graphing.coordinate_systems.CoordinateSystem.input_to_graph_point "manim.mobject.graphing.coordinate_systems.CooperativeSystem.input_to_graph_point")传递折线图时的问题（来自`Axes.get_line_graph()`）
+- [#1994](https://github.com/ManimCommunity/manim/pull/1994) : 修复[`input_to_graph_point()`]()传递折线图时的问题（来自`Axes.get_line_graph()`）
 - [#2017](https://github.com/ManimCommunity/manim/pull/2017)：避免使用已弃用的`get_points`方法和固定`OpenGLPMPoint`颜色
 
 ### 与文档相关的更改
@@ -68,8 +68,8 @@
 - [#2131](https://github.com/ManimCommunity/manim/pull/2131) : 复制编辑了文档中的配置教程
 - [＃2120](https://github.com/ManimCommunity/manim/pull/2120)：更改`manim_directive`为使用干净的配置`tempconfig`
 - [＃2122](https://github.com/ManimCommunity/manim/pull/2122)：通过将继承图中损坏的链接移动到`reference.rst`
-- [＃2115](https://github.com/ManimCommunity/manim/pull/2115)：改进的文档字符串[`PMobject.add_points()`](../reference/manim.mobject.types.point_cloud_mobject.PMobject.html#manim.mobject.types.point_cloud_mobject.PMobject.add_points "manim.mobject.types.point_cloud_mobject.PMobject.add_points")
-- [＃2116](https://github.com/ManimCommunity/manim/pull/2116)：为更准确`line_spacing`的参数制作类型提示[`Paragraph`](../reference/manim.mobject.text.text_mobject.Paragraph.html#manim.mobject.text.text_mobject.Paragraph "manim.mobject.text.text_mobject.Paragraph")
+- [＃2115](https://github.com/ManimCommunity/manim/pull/2115)：改进的文档字符串[`PMobject.add_points()`]()
+- [＃2116](https://github.com/ManimCommunity/manim/pull/2116)：为更准确`line_spacing`的参数制作类型提示[`Paragraph`]()
 - [#2117](https://github.com/ManimCommunity/manim/pull/2117)：更改了文档示例中设置背景颜色的方式，以避免将设置泄露给其他示例
 - [＃2101](https://github.com/ManimCommunity/manim/pull/2101)：添加了翻译过程尚未准备好的注释
 - [#2055](https://github.com/ManimCommunity/manim/pull/2055)`Graph.add_edges()` : 修复了 and 的参数类型`Graph.add_vertices()`
@@ -80,7 +80,7 @@
 ### 有关测试系统的更改
 
 - [#2008](https://github.com/ManimCommunity/manim/pull/2008)：重用 OpenGL 的 CLI 标志测试
-- [#2080](https://github.com/ManimCommunity/manim/pull/2080)：重复使用[`Mobject`](../reference/manim.mobject.mobject.Mobject.html#manim.mobject.mobject.Mobject "manim.mobject.mobject.Mobject")测试`OpenGLMobject`
+- [#2080](https://github.com/ManimCommunity/manim/pull/2080)：重复使用[`Mobject`]()测试`OpenGLMobject`
 
 ### 我们的开发基础设施的变化
 
@@ -89,11 +89,11 @@
 ### 代码质量改进和类似的重构
 
 - [#2050](https://github.com/ManimCommunity/manim/pull/2050)：使颜色别名对 IDE 友好
-- [#2126](https://github.com/ManimCommunity/manim/pull/2126) : 修复了发布的信息消息中的空白[`SceneFileWriter.clean_cache()`](../reference/manim.scene.scene_file_writer.SceneFileWriter.html#manim.scene.scene_file_writer.SceneFileWriter.clean_cache "manim.scene.scene_file_writer.SceneFileWriter.clean_cache")
+- [#2126](https://github.com/ManimCommunity/manim/pull/2126) : 修复了发布的信息消息中的空白[`SceneFileWriter.clean_cache()`]()
 - [#2124](https://github.com/ManimCommunity/manim/pull/2124) : 升级了几个依赖项（特别是`skia-pathops`：）
 - [#2001](https://github.com/ManimCommunity/manim/pull/2001)：修复了 LGTM 发出的几个警告
 - [＃2064](https://github.com/ManimCommunity/manim/pull/2064)：删除重复的插入着色器目录
-- [＃2027](https://github.com/ManimCommunity/manim/pull/2027)：改进了发布的信息消息中的措辞[`SceneFileWriter.clean_cache()`](../reference/manim.scene.scene_file_writer.SceneFileWriter.html#manim.scene.scene_file_writer.SceneFileWriter.clean_cache "manim.scene.scene_file_writer.SceneFileWriter.clean_cache")
+- [＃2027](https://github.com/ManimCommunity/manim/pull/2027)：改进了发布的信息消息中的措辞[`SceneFileWriter.clean_cache()`]()
 - [＃1968](https://github.com/ManimCommunity/manim/pull/1968)：锐化 Flake8 配置并修复了由此产生的警告
 
 ### 新发布
