--- a/changelogs/0.14.0-changelog.md
+++ b/changelogs/0.14.0-changelog.md
@@ -8,44 +8,44 @@
 
   - 删除了`get_graph`、`get_implicit_curve`、`get_derivative_graph`、`get_line_graph`和`get_parametric_curve`以支持其`plot`变体
   - 删除`FullScreenFadeRectangle`并`PictureInPictureFrame`
-  - 从中删除了`path_arc`参数[`SpinInFromNothing`](../reference/manim.animation.growing.SpinInFromNothing.html#manim.animation.growing.SpinInFromNothing "manim.animation.growing.SpinInFromNothing")
+  - 从中删除了`path_arc`参数[`SpinInFromNothing`]()
   - 从中删除了`set_submobjects`方法`opengl_mobject.py`
 
 ### 新功能
 
-- [#2341](https://github.com/ManimCommunity/manim/pull/2341)：更新[`Text`](../reference/manim.mobject.text.text_mobject.Text.html#manim.mobject.text.text_mobject.Text "manim.mobject.text.text_mobject.Text")以使用新的`ManimPango`颜色设置
+- [#2341](https://github.com/ManimCommunity/manim/pull/2341)：更新[`Text`]()以使用新的`ManimPango`颜色设置
 
-  - [`Text`](../reference/manim.mobject.text.text_mobject.Text.html#manim.mobject.text.text_mobject.Text "manim.mobject.text.text_mobject.Text")类现在使用颜色和渐变引入的颜色设置。`ManimPango 0.4.0`
+  - [`Text`]()类现在使用颜色和渐变引入的颜色设置。`ManimPango 0.4.0`
 
-- [＃2397](https://github.com/ManimCommunity/manim/pull/2397)：添加了`label_constructor`参数[`NumberLine`](../reference/manim.mobject.graphing.number_line.NumberLine.html#manim.mobject.graphing.number_line.NumberLine "manim.mobject.graphing.number_line.NumberLine")
+- [＃2397](https://github.com/ManimCommunity/manim/pull/2397)：添加了`label_constructor`参数[`NumberLine`]()
 
-  允许更改默认情况下用于构造[`Axes`](../reference/manim.mobject.graphing.coordinate_systems.Axes.html#manim.mobject.graphing.coordinate_systems.Axes "manim.mobject.graphing.coordinate_systems.Axes")和[`NumberLine`](../reference/manim.mobject.graphing.number_line.NumberLine.html#manim.mobject.graphing.number_line.NumberLine "manim.mobject.graphing.number_line.NumberLine")标签的类。如果需要，可以轻松使用[`Text`](../reference/manim.mobject.text.text_mobject.Text.html#manim.mobject.text.text_mobject.Text "manim.mobject.text.text_mobject.Text")标签。
+  允许更改默认情况下用于构造[`Axes`]()和[`NumberLine`]()标签的类。如果需要，可以轻松使用[`Text`]()标签。
 
 ### 增强功能
 
-- [＃2383](https://github.com/ManimCommunity/manim/pull/2383)：[`Surface.set_fill_by_value()`](../reference/manim.mobject.three_d.three_dimensions.Surface.html#manim.mobject.three_d.three_dimensions.Surface.set_fill_by_value "manim.mobject. Three_d. Three_dimensions.Surface.set_fill_by_value")沿不同轴制作支撑渐变
-- [＃2388](https://github.com/ManimCommunity/manim/pull/2388)：添加`about_point`关键字参数[`ApplyMatrix`](../reference/manim.animation.transform.ApplyMatrix.html#manim.animation.transform.ApplyMatrix "manim.animation.transform.ApplyMatrix")
+- [＃2383](https://github.com/ManimCommunity/manim/pull/2383)：[`Surface.set_fill_by_value()`]()沿不同轴制作支撑渐变
+- [＃2388](https://github.com/ManimCommunity/manim/pull/2388)：添加`about_point`关键字参数[`ApplyMatrix`]()
 - [#2395](https://github.com/ManimCommunity/manim/pull/2395) : 添加路径函数的文档
-- [＃2372](https://github.com/ManimCommunity/manim/pull/2372)：改进[`DashedVMobject`](../reference/manim.mobject.types.vectorized_mobject.DashedVMobject.html#manim.mobject.types.vectorized_mobject.DashedVMobject "manim.mobject.types.vectorized_mobject.DashedVMobject")
+- [＃2372](https://github.com/ManimCommunity/manim/pull/2372)：改进[`DashedVMobject`]()
 
-  [`DashedVMobject`](../reference/manim.mobject.types.vectorized_mobject.DashedVMobject.html#manim.mobject.types.vectorized_mobject.DashedVMobject "manim.mobject.types.vectorized_mobject.DashedVMobject")用于在大多数绘制的曲线上创建拉伸和不均匀的虚线。现在划线长度已相等。保留使用旧方法的选项。新的关键字参数：`dash_offset`. 该参数会改变起始点。
+  [`DashedVMobject`]()用于在大多数绘制的曲线上创建拉伸和不均匀的虚线。现在划线长度已相等。保留使用旧方法的选项。新的关键字参数：`dash_offset`. 该参数会改变起始点。
 
 ### 修复了错误
 
-- [＃2409](https://github.com/ManimCommunity/manim/pull/2409)：通过在调用时修剪路径中的空曲线来修复性能下降[`VMobject.align_points()`](../reference/manim.mobject.types.vectorized_mobject.VMobject.html#manim.mobject.types.vectorized_mobject.VMobject.align_points "manim.mobject.types.vectorized_mobject.VMobject.align_points")
+- [＃2409](https://github.com/ManimCommunity/manim/pull/2409)：通过在调用时修剪路径中的空曲线来修复性能下降[`VMobject.align_points()`]()
 - [＃2392](https://github.com/ManimCommunity/manim/pull/2392)：固定`ZeroDivisionError`在`three_dimensions`
-- [＃2362](https://github.com/ManimCommunity/manim/pull/2362)：修复了 phi 更新程序[`ThreeDScene.begin_3dillusion_camera_rotation()`](../reference/manim.scene.three_d_scene.ThreeDScene.html#manim.scene.three_d_scene.ThreeDScene.begin_3dillusion_camera_rotation "manim.scene. Three_d_scene.ThreeDScene.begin_3dillusion_camera_rotation")
+- [＃2362](https://github.com/ManimCommunity/manim/pull/2362)：修复了 phi 更新程序[`ThreeDScene.begin_3dillusion_camera_rotation()`]()
 
 ### 与文档相关的更改
 
 - [＃2415](https://github.com/ManimCommunity/manim/pull/2415)：删除了自述文件中有关使用和安装 Docker 的说明
-- [#2414](https://github.com/ManimCommunity/manim/pull/2414) : 对[配置](../guides/configuration.html)教程进行了改进
+- [#2414](https://github.com/ManimCommunity/manim/pull/2414) : 对[配置]()教程进行了改进
 - [#2423](https://github.com/ManimCommunity/manim/pull/2423) : 将 macOS 安装的推荐更改为`mactex-no-gui`from`mactex`
-- [#2407](https://github.com/ManimCommunity/manim/pull/2407)：澄清了[`Mobject.animate()`](../reference/manim.mobject.mobject.Mobject.html#manim.mobject.mobject.Mobject.animate "manim.mobject.mobject.Mobject.animate"),[`Mobject.set()`](../reference/manim.mobject.mobject.Mobject.html#manim.mobject.mobject.Mobject.set "manim.mobject.mobject.Mobject.set")和的文档字符串[`Variable`](../reference/manim.mobject.text.numbers.Variable.html#manim.mobject.text.numbers.Variable "manim.mobject.text.numbers.Variable")
+- [#2407](https://github.com/ManimCommunity/manim/pull/2407)：澄清了[`Mobject.animate()`](),[`Mobject.set()`]()和的文档字符串[`Variable`]()
 - [＃2352](https://github.com/ManimCommunity/manim/pull/2352)：添加了 Crowdin 徽章
 - [#2371](https://github.com/ManimCommunity/manim/pull/2371)：添加`dvips`到 Linux 上所需的 LaTeX 包列表中
-- [＃2403](https://github.com/ManimCommunity/manim/pull/2403)：改进了文档字符串[`ApplyMethod`](../reference/manim.animation.transform.ApplyMethod.html#manim.animation.transform.ApplyMethod "manim.animation.transform.ApplyMethod")并删除了传播的`__init__`文档字符串
-- [＃2391](https://github.com/ManimCommunity/manim/pull/2391)：修复了文档中参数名称的拼写错误[`NumberLine`](../reference/manim.mobject.graphing.number_line.NumberLine.html#manim.mobject.graphing.number_line.NumberLine "manim.mobject.graphing.number_line.NumberLine")
+- [＃2403](https://github.com/ManimCommunity/manim/pull/2403)：改进了文档字符串[`ApplyMethod`]()并删除了传播的`__init__`文档字符串
+- [＃2391](https://github.com/ManimCommunity/manim/pull/2391)：修复了文档中参数名称的拼写错误[`NumberLine`]()
 - [＃2368](https://github.com/ManimCommunity/manim/pull/2368)：在国际化中添加注释
 
 ### 代码质量改进和类似的重构
@@ -56,9 +56,9 @@
 - [＃2410](https://github.com/ManimCommunity/manim/pull/2410)：固定 Flake8
 - [＃2401](https://github.com/ManimCommunity/manim/pull/2401)：修复了类型注释`mobject.three_dimensions`
 - [#2405](https://github.com/ManimCommunity/manim/pull/2405)：删除了一些未使用的 OpenGL 文件
-- [#2399](https://github.com/ManimCommunity/manim/pull/2399) : 修复了类型注释[`table`](../reference/manim.mobject.table.html#module-manim.mobject.table "manim.mobject.表")
+- [#2399](https://github.com/ManimCommunity/manim/pull/2399) : 修复了类型注释[`table`]()
 - [＃2385](https://github.com/ManimCommunity/manim/pull/2385)：使快速入门教程中的注释更加精确
-- [#2377](https://github.com/ManimCommunity/manim/pull/2377) : 修复了参数的类型提示[`MoveAlongPath`](../reference/manim.animation.movement.MoveAlongPath.html#manim.animation.movement.MoveAlongPath "manim.animation.movement.MoveAlongPath")
+- [#2377](https://github.com/ManimCommunity/manim/pull/2377) : 修复了参数的类型提示[`MoveAlongPath`]()
 
 ### 新发布
 
