--- a/changelogs/0.15.2-changelog.md
+++ b/changelogs/0.15.2-changelog.md
@@ -11,12 +11,12 @@
   - 添加了`no_args_is_help`参数以允许轻松访问帮助页面。`manim render`
   - `manim`在帮助页面尾声中添加了有关如何访问其他命令帮助页面的注释。
 
-- [#2404](https://github.com/ManimCommunity/manim/pull/2404)：添加[`SpiralIn`](../reference/manim.animation.creation.SpiralIn.html#manim.animation.creation.SpiralIn "manim.animation.creation.SpiralIn")动画
+- [#2404](https://github.com/ManimCommunity/manim/pull/2404)：添加[`SpiralIn`]()动画
 
-  - 使[`ManimBanner`](../reference/manim.mobject.logo.ManimBanner.html#manim.mobject.logo.ManimBanner "manim.mobject.logo.ManimBanner")之可用[`SpiralIn`](../reference/manim.animation.creation.SpiralIn.html#manim.animation.creation.SpiralIn "manim.animation.creation.SpiralIn")。
+  - 使[`ManimBanner`]()之可用[`SpiralIn`]()。
 
 - [＃2534](https://github.com/ManimCommunity/manim/pull/2534)：实施`OpenGLImageMobject`
-- [＃2684](https://github.com/ManimCommunity/manim/pull/2684)：创建了一种更易于使用的方式来使用 line.py 角度函数创建角度 -[`Angle.from_three_points()`](../reference/manim.mobject.geometry.line.Angle.html#manim.mobject.geometry.line.Angle.from_three_points "manim.mobject.geometry.line.Angle.from_third_points")
+- [＃2684](https://github.com/ManimCommunity/manim/pull/2684)：创建了一种更易于使用的方式来使用 line.py 角度函数创建角度 -[`Angle.from_three_points()`]()
 
 ### 增强功能
 
@@ -25,44 +25,44 @@
 
   在`file_ops.py`和中`scene_file_writer.py`：str 类型文件名的使用大部分（请参阅更多信息）转换为 pathlib 的 Path 对象。方法的使用`os.path`已转换为等效的 pathlib 方法。
 
-- [#2655](https://github.com/ManimCommunity/manim/pull/2655) : 修复[`assert_is_mobject_method()`](../reference/manim.animation.updaters.mobject_update_utils.html#manim.animation.updaters.mobject_update_utils.assert_is_mobject_method "manim.animation.updaters.mobject_update_utils.assert_is_mobject_method")使用 OpenGL 时的问题
+- [#2655](https://github.com/ManimCommunity/manim/pull/2655) : 修复[`assert_is_mobject_method()`]()使用 OpenGL 时的问题
 - [#2665](https://github.com/ManimCommunity/manim/pull/2665) : 改进了使用`.animate`语法时对属性的处理
 - [#2674](https://github.com/ManimCommunity/manim/pull/2674)：文件和类型`simple_functions.py`
 
   - 添加文档`simple_functions.py`。
   - 对这些功能进行了一些额外的补充和澄清。
 
-- [#2693](https://github.com/ManimCommunity/manim/pull/2693)：允许[`MovingCamera.auto_zoom()`](../reference/manim.camera.moving_camera.MovingCamera.html#manim.camera.moving_camera.MovingCamera.auto_zoom "manim.camera.movi​​ng_camera.MovingCamera.auto_zoom")在没有动画的情况下使用
+- [#2693](https://github.com/ManimCommunity/manim/pull/2693)：允许[`MovingCamera.auto_zoom()`]()在没有动画的情况下使用
 
   允许自动缩放相机，而无需通过传递`animation=False`参数来播放动画
 
 ### 修复了错误
 
 - [＃2546](https://github.com/ManimCommunity/manim/pull/2546)：修复了文件日志记录错误和一些维护
-- [＃2597](https://github.com/ManimCommunity/manim/pull/2597)[`Uncreate`](../reference/manim.animation.creation.Uncreate.html#manim.animation.creation.Uncreate "manim.animation.creation.Uncreate") ：通过`rate_func`引入新参数`reversed`来修复错误[`Animation`](../reference/manim.animation.animation.Animation.html#manim.animation.animation.Animation "manim.animation.animation.Animation")
+- [＃2597](https://github.com/ManimCommunity/manim/pull/2597)[`Uncreate`]() ：通过`rate_func`引入新参数`reversed`来修复错误[`Animation`]()
 
-  - 折射[`Uncreate`](../reference/manim.animation.creation.Uncreate.html#manim.animation.creation.Uncreate "manim.animation.creation.Uncreate"). 新的实现使用了一个标志成员`reversed`。将其设置为`True`，其超类会进行相反的处理。
-  - `reversed`引入一个 bool 参数[`Animation`](../reference/manim.animation.animation.Animation.html#manim.animation.animation.Animation "manim.animation.animation.Animation")。它决定动画是否需要向后播放。默认为 False。
-  - 在 中添加条件分支[`Animation.get_sub_alpha()`](../reference/manim.animation.animation.Animation.html#manim.animation.animation.Animation.get_sub_alpha "manim.animation.animation.Animation.get_sub_alpha")。如果参数`reversed`为 True，则设置`rate_func(t)`为。`rate_func(1 - t)`
+  - 折射[`Uncreate`](). 新的实现使用了一个标志成员`reversed`。将其设置为`True`，其超类会进行相反的处理。
+  - `reversed`引入一个 bool 参数[`Animation`]()。它决定动画是否需要向后播放。默认为 False。
+  - 在 中添加条件分支[`Animation.get_sub_alpha()`]()。如果参数`reversed`为 True，则设置`rate_func(t)`为。`rate_func(1 - t)`
 
-- [#2613](https://github.com/ManimCommunity/manim/pull/2613) : 修复了[`Circle.point_at_angle()`](../reference/manim.mobject.geometry.arc.Circle.html#manim.mobject.geometry.arc.Circle.point_at_angle "manim.mobject.geometry.arc.Circle.point_at_angle")角度不在区间内时的错误\[0,2π\]
-- [#2634](https://github.com/ManimCommunity/manim/pull/2634) : 修复背景线绘制两次[`NumberPlane`](../reference/manim.mobject.graphing.coordinate_systems.NumberPlane.html#manim.mobject.graphing.coordinate_systems.NumberPlane "manim.mobject.graphing.coordinate_systems.NumberPlane")
+- [#2613](https://github.com/ManimCommunity/manim/pull/2613) : 修复了[`Circle.point_at_angle()`]()角度不在区间内时的错误\[0,2π\]
+- [#2634](https://github.com/ManimCommunity/manim/pull/2634) : 修复背景线绘制两次[`NumberPlane`]()
 - [#2648](https://github.com/ManimCommunity/manim/pull/2648)：处理用户定义的摆动动画中心
-- [#2658](https://github.com/ManimCommunity/manim/pull/2658) : 修复重写的`set_style`参数[`BackgroundRectangle`](../reference/manim.mobject.geometry.shape_matchers.BackgroundRectangle.html#manim.mobject.geometry.shape_matchers.BackgroundRectangle "manim.mobject.geometry.shape_matchers.BackgroundRectangle")
+- [#2658](https://github.com/ManimCommunity/manim/pull/2658) : 修复重写的`set_style`参数[`BackgroundRectangle`]()
 
-  在已应用的对象上使用[`Write`](../reference/manim.animation.creation.Write.html#manim.animation.creation.Write "manim.animation.creation.Write")动画不再生成.[`Text`](../reference/manim.mobject.text.text_mobject.Text.html#manim.mobject.text.text_mobject.Text "manim.mobject.text.text_mobject.Text")` .add_background_rectangle()``TypeError `
+  在已应用的对象上使用[`Write`]()动画不再生成.[`Text`]()` .add_background_rectangle()``TypeError `
 
 - [＃2668](https://github.com/ManimCommunity/manim/pull/2668)：（重新）设置`OpenGLRenderer`初始化场景时的背景颜色
 - [#2676](https://github.com/ManimCommunity/manim/pull/2676) : 修复了 OpenGL 渲染器动画中自定义属性的传播
-- [＃2688](https://github.com/ManimCommunity/manim/pull/2688)：修复了[`SpiralIn`](../reference/manim.animation.creation.SpiralIn.html#manim.animation.creation.SpiralIn "manim.animation.creation.SpiralIn")和的两个小问题[`ManimBanner`](../reference/manim.mobject.logo.ManimBanner.html#manim.mobject.logo.ManimBanner "manim.mobject.logo.ManimBanner")
+- [＃2688](https://github.com/ManimCommunity/manim/pull/2688)：修复了[`SpiralIn`]()和的两个小问题[`ManimBanner`]()
 
 ### 与文档相关的更改
 
 - [＃2609](https://github.com/ManimCommunity/manim/pull/2609)：复制编辑故障排除.rst
 - [#2610](https://github.com/ManimCommunity/manim/pull/2610) : 添加示例 PolygonOnAxes
-- [#2617](https://github.com/ManimCommunity/manim/pull/2617)：重新添加[`value_tracker`](../reference/manim.mobject.value_tracker.html#module-manim.mobject.value_tracker "manim.mobject.value_tracker")文档
+- [#2617](https://github.com/ManimCommunity/manim/pull/2617)：重新添加[`value_tracker`]()文档
 - [＃2619](https://github.com/ManimCommunity/manim/pull/2619)：改进 arrange_in_grid 的示例
-- [＃2620](https://github.com/ManimCommunity/manim/pull/2620)：修复了拼写错误[`Animation.is_introducer()`](../reference/manim.animation.animation.Animation.html#manim.animation.animation.Animation.is_introducer "manim.animation.animation.Animation.is_introducer")
+- [＃2620](https://github.com/ManimCommunity/manim/pull/2620)：修复了拼写错误[`Animation.is_introducer()`]()
 - [#2640](https://github.com/ManimCommunity/manim/pull/2640)：编辑文档
 
   已审查`tutorials/configurations.rst`。编辑了一些简单的错误，例如 Manim 没有大写和逗号。
