--- a/changelogs/0.16.0-changelog.md
+++ b/changelogs/0.16.0-changelog.md
@@ -8,12 +8,12 @@
 
   这个新的[主题指南](../guides/deep_dive.html)旨在成为一个全面的演练，描述当您运行 Manim 来制作视频时它所做的所有事情。
 
-- [#2732](https://github.com/ManimCommunity/manim/pull/2732)：改进了部署文档的整体结构；添加了专门的常见[问题解答部分](../faq/index.html)
-- [＃2749](https://github.com/ManimCommunity/manim/pull/2749)：添加了[`ChangeSpeed`](../reference/manim.animation.speedmodifier.ChangeSpeed.html#manim.animation.speedmodifier.ChangeSpeed "manim.animation.speedmodifier.ChangeSpeed")一个动画包装器，可以平滑地更改动画播放的速度
+- [#2732](https://github.com/ManimCommunity/manim/pull/2732)：改进了部署文档的整体结构；添加了专门的常见[问题解答部分]()
+- [＃2749](https://github.com/ManimCommunity/manim/pull/2749)：添加了[`ChangeSpeed`]()一个动画包装器，可以平滑地更改动画播放的速度
 
-  任何动画的速度都可以通过包装动画[`ChangeSpeed`](../reference/manim.animation.speedmodifier.ChangeSpeed.html#manim.animation.speedmodifier.ChangeSpeed "manim.animation.speedmodifier.ChangeSpeed")并传递一个字典来改变，`speedinfo`字典的键是相对动画运行时间戳，值是绝对速度因子；例如，当动画完成到 50% 时，平滑地加速动画 2 倍，然后在动画完成 75% 后平滑地减慢到默认运行速度的 1/4。将调整动画的速度以匹配更改后的播放速度。` {0.5: 2, 0.75: 0.25}``run_time `
+  任何动画的速度都可以通过包装动画[`ChangeSpeed`]()并传递一个字典来改变，`speedinfo`字典的键是相对动画运行时间戳，值是绝对速度因子；例如，当动画完成到 50% 时，平滑地加速动画 2 倍，然后在动画完成 75% 后平滑地减慢到默认运行速度的 1/4。将调整动画的速度以匹配更改后的播放速度。` {0.5: 2, 0.75: 0.25}``run_time `
 
-  还可以添加考虑速度变化的基于时间的更新程序，使用辅助[`ChangeSpeed.add_updater()`](../reference/manim.animation.speedmodifier.ChangeSpeed.html#manim.animation.speedmodifier.ChangeSpeed.add_updater "manim.animation.speedmodifier.ChangeSpeed.add_updater")方法来执行此操作。
+  还可以添加考虑速度变化的基于时间的更新程序，使用辅助[`ChangeSpeed.add_updater()`]()方法来执行此操作。
 
 ### 新功能
 
@@ -22,20 +22,20 @@
 
 ### 增强功能
 
-- [#2186](https://github.com/ManimCommunity/manim/pull/2186) : 启用按值填充颜色`OpenGLSurface`，替换 with`colors`的关键字参数[`Surface.set_fill_by_value()`](../reference/manim.mobject.three_d.three_dimensions.Surface.html#manim.mobject.three_d.three_dimensions.Surface.set_fill_by_value "manim.mobject. Three_d. Three_dimensions.Surface.set_fill_by_value")`colorscale`
+- [#2186](https://github.com/ManimCommunity/manim/pull/2186) : 启用按值填充颜色`OpenGLSurface`，替换 with`colors`的关键字参数[`Surface.set_fill_by_value()`]()`colorscale`
 - [＃2288](https://github.com/ManimCommunity/manim/pull/2288)：尝试将相同的 mobject 添加为子对象两次时添加警告
 - [＃2707](https://github.com/ManimCommunity/manim/pull/2707)：修复了缺少`get_nth_curve_length_pieces`的方法`OpenGLVMobject`
 
   - `get_curve_functions_with_lengths`删除了 in 的重复定义`OpenGLVMobject`
   - `get_nth_curve_length_pieces`添加了 to 的定义`OpenGLVMobject`
 
-- [＃2709](https://github.com/ManimCommunity/manim/pull/2709)：改进了括号的外观[`Matrix`](../reference/manim.mobject.matrix.Matrix.html#manim.mobject.matrix.Matrix "manim.mobject.matrix.Matrix")
+- [＃2709](https://github.com/ManimCommunity/manim/pull/2709)：改进了括号的外观[`Matrix`]()
 - [＃2714](https://github.com/ManimCommunity/manim/pull/2714)：修复`OpenGLVMobject.pointwise_become_partial()`以改善描边渲染
-- [#2727](https://github.com/ManimCommunity/manim/pull/2727)：[`ArrowVectorField`](../reference/manim.mobject.vector_field.ArrowVectorField.html#manim.mobject.vector_field.ArrowVectorField "manim.mobject.vector_field.ArrowVectorField")贝塞尔曲线计算的性能略有提高
-- [＃2728](https://github.com/ManimCommunity/manim/pull/2728)：添加[`VectorField.fit_to_coordinate_system()`](../reference/manim.mobject.vector_field.VectorField.html#manim.mobject.vector_field.VectorField.fit_to_coordinate_system "manim.mobject.vector_field.VectorField.fit_to_coordinate_system")以将向量场拟合到给定的坐标系
+- [#2727](https://github.com/ManimCommunity/manim/pull/2727)：[`ArrowVectorField`]()贝塞尔曲线计算的性能略有提高
+- [＃2728](https://github.com/ManimCommunity/manim/pull/2728)：添加[`VectorField.fit_to_coordinate_system()`]()以将向量场拟合到给定的坐标系
 - [#2730](https://github.com/ManimCommunity/manim/pull/2730)：添加注释，让用户更容易找到默认 CLI 子命令的文档
 - [#2746](https://github.com/ManimCommunity/manim/pull/2746) : 在 docker 镜像中安装 Ghostscript
-- [＃2841](https://github.com/ManimCommunity/manim/pull/2841)：添加[`split_quadratic_bezier()`](../reference/manim.utils.bezier.html#manim.utils.bezier.split_quadratic_bezier "manim.utils.bezier.split_quadratic_bezier")和[`subdivide_quadratic_bezier()`](../reference/manim.utils.bezier.html#manim.utils.bezier.subdivide_quadratic_bezier "manim.utils.bezier.subdivide_quadratic_bezier")
+- [＃2841](https://github.com/ManimCommunity/manim/pull/2841)：添加[`split_quadratic_bezier()`]()和[`subdivide_quadratic_bezier()`]()
 - [＃2842](https://github.com/ManimCommunity/manim/pull/2842)：CLI：将功能从移至并添加了弃用警告` manim new``manim init``manim new `
 - [＃2866](https://github.com/ManimCommunity/manim/pull/2866)：重新组织测试文件以匹配库模块结构
 
@@ -43,34 +43,34 @@
 
 - [#2567](https://github.com/ManimCommunity/manim/pull/2567) : 对每个场景渲染使用 tempconfig
 - [#2638](https://github.com/ManimCommunity/manim/pull/2638) : 修复了`BarChart.change_bar_values()` 高度为 0 时不更新的问题
-- [＃2661](https://github.com/ManimCommunity/manim/pull/2661)：修复了提示调整大小功能以[`Axes`](../reference/manim.mobject.graphing.coordinate_systems.Axes.html#manim.mobject.graphing.coordinate_systems.Axes "manim.mobject.graphing.coordinate_systems.Axes")匹配文档
-- [#2703](https://github.com/ManimCommunity/manim/pull/2703) : 读取文件时默认为 utf-8[`Code`](../reference/manim.mobject.text.code_mobject.Code.html#manim.mobject.text.code_mobject.Code "manim.mobject.text.code_mobject.Code")
-- [＃2721](https://github.com/ManimCommunity/manim/pull/2721)：修复了行中的错误文本切片[`Paragraph`](../reference/manim.mobject.text.text_mobject.Paragraph.html#manim.mobject.text.text_mobject.Paragraph "manim.mobject.text.text_mobject.Paragraph")
-- [＃2725](https://github.com/ManimCommunity/manim/pull/2725)：修复了错误的缩进[`Code`](../reference/manim.mobject.text.code_mobject.Code.html#manim.mobject.text.code_mobject.Code "manim.mobject.text.code_mobject.Code")
-- [#2734](https://github.com/ManimCommunity/manim/pull/2734) : 修复了运行[`Scene.play()`](../reference/manim.scene.scene.Scene.html#manim.scene.scene.Scene.play "manim.场景.场景.场景.play")或[`Scene.wait()`](../reference/manim.scene.scene.Scene.html#manim.scene.scene.Scene.wait "manim.scene.scene.Scene.wait")交互模式下的 OpenGL 段错误
+- [＃2661](https://github.com/ManimCommunity/manim/pull/2661)：修复了提示调整大小功能以[`Axes`]()匹配文档
+- [#2703](https://github.com/ManimCommunity/manim/pull/2703) : 读取文件时默认为 utf-8[`Code`]()
+- [＃2721](https://github.com/ManimCommunity/manim/pull/2721)：修复了行中的错误文本切片[`Paragraph`]()
+- [＃2725](https://github.com/ManimCommunity/manim/pull/2725)：修复了错误的缩进[`Code`]()
+- [#2734](https://github.com/ManimCommunity/manim/pull/2734) : 修复了运行[`Scene.play()`]()或[`Scene.wait()`]()交互模式下的 OpenGL 段错误
 - [＃2753](https://github.com/ManimCommunity/manim/pull/2753)：修复了管道中 docker 映像的多平台构建
-- [＃2757](https://github.com/ManimCommunity/manim/pull/2757)：在模块中添加了丢失的`__init__.py`文件[`docbuild`](../reference/manim.utils.docbuild.html#module-manim.utils.docbuild "manim.utils.docbuild")
-- [＃2770](https://github.com/ManimCommunity/manim/pull/2770)：修复了[`VMobject.proportion_from_point()`](../reference/manim.mobject.types.vectorized_mobject.VMobject.html#manim.mobject.types.vectorized_mobject.VMobject.proportion_from_point "manim.mobject.types.vectorized_mobject.VMobject.proportion_from_point")导致返回大于 1 的比例的错误
-- [＃2826](https://github.com/ManimCommunity/manim/pull/2826)：修复了来自以下位置的泄漏对象[`TransformMatchingAbstractBase`](../reference/manim.animation.transform_matching_parts.TransformMatchingAbstractBase.html#manim.animation.transform_matching_parts.TransformMatchingAbstractBase "manim.animation.transform_matching_parts.TransformMatchingAbstractBase")
+- [＃2757](https://github.com/ManimCommunity/manim/pull/2757)：在模块中添加了丢失的`__init__.py`文件[`docbuild`]()
+- [＃2770](https://github.com/ManimCommunity/manim/pull/2770)：修复了[`VMobject.proportion_from_point()`]()导致返回大于 1 的比例的错误
+- [＃2826](https://github.com/ManimCommunity/manim/pull/2826)：修复了来自以下位置的泄漏对象[`TransformMatchingAbstractBase`]()
 - [＃2870](https://github.com/ManimCommunity/manim/pull/2870)：修复了问题并删除了存在于工作目录中的必要性` manim init scene SCENE_NAME filename.py``main.py `
 
 ### 与文档相关的更改
 
 - [#2704](https://github.com/ManimCommunity/manim/pull/2704) : 更新了 Pango 标记格式化页面的 URL
 - [＃2716](https://github.com/ManimCommunity/manim/pull/2716)：改进了参考手册的顺序
-- [＃2720](https://github.com/ManimCommunity/manim/pull/2720)：修复了文档字符串中的拼写错误[`Angle`](../reference/manim.mobject.geometry.line.Angle.html#manim.mobject.geometry.line.Angle "manim.mobject.geometry.line.Angle")
-- [＃2722](https://github.com/ManimCommunity/manim/pull/2722)：修复了类文档字符串中的拼写错误[`mobject.table`](../reference/manim.mobject.table.html#module-manim.mobject.table "manim.mobject.表")
-- [＃2726](https://github.com/ManimCommunity/manim/pull/2726)：编辑长度注释[`NumberPlane`](../reference/manim.mobject.graphing.coordinate_systems.NumberPlane.html#manim.mobject.graphing.coordinate_systems.NumberPlane "manim.mobject.graphing.coordinate_systems.NumberPlane")并添加另一个示例
-- [＃2740](https://github.com/ManimCommunity/manim/pull/2740)：修复了文档[`Cylinder.get_direction()`](../reference/manim.mobject.three_d.three_dimensions.Cylinder.html#manim.mobject.three_d.three_dimensions.Cylinder.get_direction "manim.mobject. Three_d. Three_dimensions.Cylinder.get_direction")
-- [＃2755](https://github.com/ManimCommunity/manim/pull/2755)：修复了文档字符串 [`VMobject.get_end_anchors()`](../reference/manim.mobject.types.vectorized_mobject.VMobject.html#manim.mobject.types.vectorized_mobject.VMobject.get_end_anchors "manim.mobject.types.vectorized_mobject.VMobject.get_end_anchors")
+- [＃2720](https://github.com/ManimCommunity/manim/pull/2720)：修复了文档字符串中的拼写错误[`Angle`]()
+- [＃2722](https://github.com/ManimCommunity/manim/pull/2722)：修复了类文档字符串中的拼写错误[`mobject.table`]()
+- [＃2726](https://github.com/ManimCommunity/manim/pull/2726)：编辑长度注释[`NumberPlane`]()并添加另一个示例
+- [＃2740](https://github.com/ManimCommunity/manim/pull/2740)：修复了文档[`Cylinder.get_direction()`]()
+- [＃2755](https://github.com/ManimCommunity/manim/pull/2755)：修复了文档字符串 [`VMobject.get_end_anchors()`]()
 - [#2760](https://github.com/ManimCommunity/manim/pull/2760)`cmake` :从 MacOS 安装部分删除
-- [#2767](https://github.com/ManimCommunity/manim/pull/2767)：在常见问题解答部分添加了更多问题和解答，新的[OpenGL 常见问题解答](../faq/opengl.html)
-- [＃2771](https://github.com/ManimCommunity/manim/pull/2771)：添加了`path_func`关键字参数的文档和测试[`Transform`](../reference/manim.animation.transform.Transform.html#manim.animation.transform.Transform "manim.animation.transform.Transform")
+- [#2767](https://github.com/ManimCommunity/manim/pull/2767)：在常见问题解答部分添加了更多问题和解答，新的[OpenGL 常见问题解答]()
+- [＃2771](https://github.com/ManimCommunity/manim/pull/2771)：添加了`path_func`关键字参数的文档和测试[`Transform`]()
 - [＃2828](https://github.com/ManimCommunity/manim/pull/2828)：删除了建议问题模板，添加了有关提出新功能的常见问题解答
-- [＃2849](https://github.com/ManimCommunity/manim/pull/2849)：添加了`path_arc`关键字参数的示例[`Transform`](../reference/manim.animation.transform.Transform.html#manim.animation.transform.Transform "manim.animation.transform.Transform")
-- [＃2851](https://github.com/ManimCommunity/manim/pull/2851)：添加了使用 partite 构建（神经）网络的示例[`Graph`](../reference/manim.mobject.graph.Graph.html#manim.mobject.graph.Graph "manim.mobject.graph.Graph")
+- [＃2849](https://github.com/ManimCommunity/manim/pull/2849)：添加了`path_arc`关键字参数的示例[`Transform`]()
+- [＃2851](https://github.com/ManimCommunity/manim/pull/2851)：添加了使用 partite 构建（神经）网络的示例[`Graph`]()
 - [#2855](https://github.com/ManimCommunity/manim/pull/2855) : 添加了`docker.io/`对 docker 镜像的隐式 URL 库引用
-- [＃2861](https://github.com/ManimCommunity/manim/pull/2861)：添加了文档字符串[`CoordinateSystem.plot_parametric_curve()`](../reference/manim.mobject.graphing.coordinate_systems.CoordinateSystem.html#manim.mobject.graphing.coordinate_systems.CoordinateSystem.plot_parametric_curve "manim.mobject.graphing.coordinate_systems.CooperativeSystem.plot_parametric_curve")
+- [＃2861](https://github.com/ManimCommunity/manim/pull/2861)：添加了文档字符串[`CoordinateSystem.plot_parametric_curve()`]()
 
 ### 有关测试系统的更改
 
@@ -84,7 +84,7 @@
 ### 代码质量改进和类似的重构
 
 - [＃2680](https://github.com/ManimCommunity/manim/pull/2680)：将最低要求版本增加到`numpy`1.19
-- [#2687](https://github.com/ManimCommunity/manim/pull/2687)：从 迁移到`os.path`以及其他位置`pathlib`[`SVGMobject`](../reference/manim.mobject.svg.svg_mobject.SVGMobject.html#manim.mobject.svg.svg_mobject.SVGMobject "manim.mobject.svg.svg_mobject.SVGMobject")
+- [#2687](https://github.com/ManimCommunity/manim/pull/2687)：从 迁移到`os.path`以及其他位置`pathlib`[`SVGMobject`]()
 - [#2715](https://github.com/ManimCommunity/manim/pull/2715) : 更新了已弃用的`pillow`常量
 - [#2735](https://github.com/ManimCommunity/manim/pull/2735) : 将 pyjwt 从 2.3.0 提升到 2.4.0
 - [#2748](https://github.com/ManimCommunity/manim/pull/2748)：从 9.1.0 到 9.1.1 的凹凸枕头
