--- a/changelogs/0.17.0-changelog.md
+++ b/changelogs/0.17.0-changelog.md
@@ -4,9 +4,9 @@
 
 ### 重大变更
 
-- [#2898](https://github.com/ManimCommunity/manim/pull/2898)[`SVGMobject`](../reference/manim.mobject.svg.svg_mobject.SVGMobject.html#manim.mobject.svg.svg_mobject.SVGMobject "manim.mobject.svg.svg_mobject.SVGMobject") ：移植了 3b1b/manim 的改进实现
+- [#2898](https://github.com/ManimCommunity/manim/pull/2898)[`SVGMobject`]() ：移植了 3b1b/manim 的改进实现
 
-  此版本中的实现[`SVGMobject`](../reference/manim.mobject.svg.svg_mobject.SVGMobject.html#manim.mobject.svg.svg_mobject.SVGMobject "manim.mobject.svg.svg_mobject.SVGMobject")完全改变。Manim 现在使用 Python 库`svgelements`来解析 SVG，而不是尝试自己解析。SVG 路径对象的前一个类`SVGPathMobject`已被替换（不弃用）[`VMobjectFromSVGPath`](../reference/manim.mobject.svg.svg_mobject.VMobjectFromSVGPath.html#manim.mobject.svg.svg_mobject.VMobjectFromSVGPath "manim.mobject.svg.svg_mobject.VMobjectFromSVGPath")。
+  此版本中的实现[`SVGMobject`]()完全改变。Manim 现在使用 Python 库`svgelements`来解析 SVG，而不是尝试自己解析。SVG 路径对象的前一个类`SVGPathMobject`已被替换（不弃用）[`VMobjectFromSVGPath`]()。
 
   如果您需要从 SVG 路径字符串创建 mobject，可以通过以下方式执行此操作：
 
@@ -27,45 +27,45 @@
 
 ### 新功能
 
-- [＃2883](https://github.com/ManimCommunity/manim/pull/2883)：添加动画[`RemoveTextLetterByLetter`](../reference/manim.animation.creation.RemoveTextLetterByLetter.html#manim.animation.creation.RemoveTextLetterByLetter "manim.animation.creation.RemoveTextLetterByLetter")
+- [＃2883](https://github.com/ManimCommunity/manim/pull/2883)：添加动画[`RemoveTextLetterByLetter`]()
 - [#3016](https://github.com/ManimCommunity/manim/pull/3016)`LineJointTypes` ：为 Cairo 和 OpenGL 渲染器实现
-- [#3017](https://github.com/ManimCommunity/manim/pull/3017)：用[`RendererType`](../reference/manim.constants.RendererType.html#manim.constants.RendererType "manim.constants.RendererType")枚举条目替换渲染器字符串
+- [#3017](https://github.com/ManimCommunity/manim/pull/3017)：用[`RendererType`]()枚举条目替换渲染器字符串
 
 ### 增强功能
 
-- [#2927](https://github.com/ManimCommunity/manim/pull/2927)：允许在传入 a`networkx`时返回 3D 布局` dim=3``layout_config `[`Graph`](../reference/manim.mobject.graph.Graph.html#manim.mobject.graph.Graph "manim.mobject.graph.Graph")
-- [#3014](https://github.com/ManimCommunity/manim/pull/3014)[`Mobject.animate()`](../reference/manim.mobject.mobject.Mobject.html#manim.mobject.mobject.Mobject.animate "manim.mobject.mobject.Mobject.animate") ：为某些 IDE 启用代码完成
+- [#2927](https://github.com/ManimCommunity/manim/pull/2927)：允许在传入 a`networkx`时返回 3D 布局` dim=3``layout_config `[`Graph`]()
+- [#3014](https://github.com/ManimCommunity/manim/pull/3014)[`Mobject.animate()`]() ：为某些 IDE 启用代码完成
 
   使用现有通用 Mobject 类型 T 和\_Animation Builder 的联合作为 Mobject.animate 声明的返回类型以改进代码完成度。
 
 ### 修复了错误
 
-- [＃2846](https://github.com/ManimCommunity/manim/pull/2846)：防止[`TransformMatchingTex`](../reference/manim.animation.transform_matching_parts.TransformMatchingTex.html#manim.animation.transform_matching_parts.TransformMatchingTex "manim.animation.transform_matching_parts.TransformMatchingTex")当没有什么可以褪色时崩溃
+- [＃2846](https://github.com/ManimCommunity/manim/pull/2846)：防止[`TransformMatchingTex`]()当没有什么可以褪色时崩溃
 - [#2885](https://github.com/ManimCommunity/manim/pull/2885) : 验证文件路径时始终扩展用户
 - [＃2888](https://github.com/ManimCommunity/manim/pull/2888)`tex_template` ：修复了使用时值传播的错误`tempconfig`
-- [＃2895](https://github.com/ManimCommunity/manim/pull/2895)：修复损坏[`ShowPassingFlashWithThinningStrokeWidth`](../reference/manim.animation.indication.ShowPassingFlashWithThinningStrokeWidth.html#manim.animation.indication.ShowPassingFlashWithThinningStrokeWidth "manim.animation.inspiration.ShowPassingFlashWithThinningStrokeWidth")
-- [＃2920](https://github.com/ManimCommunity/manim/pull/2920)：修复了传递`faded_line_ratio`到时褪色线的对齐方式[`NumberPlane`](../reference/manim.mobject.graphing.coordinate_systems.NumberPlane.html#manim.mobject.graphing.coordinate_systems.NumberPlane "manim.mobject.graphing.coordinate_systems.NumberPlane")
+- [＃2895](https://github.com/ManimCommunity/manim/pull/2895)：修复损坏[`ShowPassingFlashWithThinningStrokeWidth`]()
+- [＃2920](https://github.com/ManimCommunity/manim/pull/2920)：修复了传递`faded_line_ratio`到时褪色线的对齐方式[`NumberPlane`]()
 - [#2977](https://github.com/ManimCommunity/manim/pull/2977)：允许渲染空文本字符串
 - [＃2992](https://github.com/ManimCommunity/manim/pull/2992)：修复了`CLI.tex_template_file`配置文件设置
-- [#3003](https://github.com/ManimCommunity/manim/pull/3003) : 修复了创建动画对象后`run_time`的设置[`Succession`](../reference/manim.animation.composition.Succession.html#manim.animation.composition.Succession "manim.animation.composition.Succession")
+- [#3003](https://github.com/ManimCommunity/manim/pull/3003) : 修复了创建动画对象后`run_time`的设置[`Succession`]()
 - [#3019](https://github.com/ManimCommunity/manim/pull/3019) : 修复了具有多个移动命令的渲染 SVG 路径
 
 ### 与文档相关的更改
 
 - [＃2881](https://github.com/ManimCommunity/manim/pull/2881)：修复了深潜指南中的小拼写错误
-- [＃2886](https://github.com/ManimCommunity/manim/pull/2886)：添加了文档字符串和固定类型提示[`get_winding_number()`](../reference/manim.utils.space_ops.html#manim.utils.space_ops.get_winding_number "manim.utils.space_ops.get_winding_number")
+- [＃2886](https://github.com/ManimCommunity/manim/pull/2886)：添加了文档字符串和固定类型提示[`get_winding_number()`]()
 - [＃2892](https://github.com/ManimCommunity/manim/pull/2892)：更正了`PolygonOnAxes`示例中的错误
-- [＃2903](https://github.com/ManimCommunity/manim/pull/2903)：修复了常见问题解答中的小语法问题[：一般用法](../faq/general.html)
-- [＃2904](https://github.com/ManimCommunity/manim/pull/2904)：修复了[Manim 开发过程中的格式和语法问题](../contributing/development.html)
+- [＃2903](https://github.com/ManimCommunity/manim/pull/2903)：修复了常见问题解答中的小语法问题[：一般用法]()
+- [＃2904](https://github.com/ManimCommunity/manim/pull/2904)：修复了[Manim 开发过程中的格式和语法问题]()
 - [＃2911](https://github.com/ManimCommunity/manim/pull/2911)：禁用`SoundExample`文档中的自动播放
 - [＃2914](https://github.com/ManimCommunity/manim/pull/2914)：添加了 conda 安装说明
-- [＃2915](https://github.com/ManimCommunity/manim/pull/2915)：添加文档[`three_dimensions`](../reference/manim.mobject.three_d.three_dimensions.html#module-manim.mobject.three_d.three_dimensions "manim.mobject. Three_d. Three_dimensions")
-- [#2919](https://github.com/ManimCommunity/manim/pull/2919)：修正了参数并增强了描述[`ImageMobject.interpolate_color()`](../reference/manim.mobject.types.image_mobject.ImageMobject.html#manim.mobject.types.image_mobject.ImageMobject.interpolate_color "manim.mobject.types.image_mobject.ImageMobject.interpolate_color")
+- [＃2915](https://github.com/ManimCommunity/manim/pull/2915)：添加文档[`three_dimensions`]()
+- [#2919](https://github.com/ManimCommunity/manim/pull/2919)：修正了参数并增强了描述[`ImageMobject.interpolate_color()`]()
 - [＃2932](https://github.com/ManimCommunity/manim/pull/2932)：修复了空白格式问题
 - [＃2933](https://github.com/ManimCommunity/manim/pull/2933)：改进了“此模块中没有场景”错误的答案
 - [＃2936](https://github.com/ManimCommunity/manim/pull/2936)：添加了 Windows 安装说明`winget`
 - [＃2962](https://github.com/ManimCommunity/manim/pull/2962)：禁用文档中的“在 GitHub 上编辑”按钮
-- [＃2978](https://github.com/ManimCommunity/manim/pull/2978)：添加了文档和示例[`CyclicReplace`](../reference/manim.animation.transform.CyclicReplace.html#manim.animation.transform.CyclicReplace "manim.animation.transform.CyclicReplace")
+- [＃2978](https://github.com/ManimCommunity/manim/pull/2978)：添加了文档和示例[`CyclicReplace`]()
 - [#3001](https://github.com/ManimCommunity/manim/pull/3001)：添加了有关构建失败的常见问题解答`manimpango`条目
 - [＃3004](https://github.com/ManimCommunity/manim/pull/3004)：修复了文档构建警告
 - [#3018 ：](https://github.com/ManimCommunity/manim/pull/3018) [#2988](https://github.com/ManimCommunity/manim/pull/2988)的后续\- 对一些文档字符串的修复和改进
@@ -77,7 +77,7 @@
 
 - [＃2893](https://github.com/ManimCommunity/manim/pull/2893)：改进的性能`test_threed.py`
 - [＃2981](https://github.com/ManimCommunity/manim/pull/2981)：实现了后备保存行为`pytest --show_diff`
-- [＃2982](https://github.com/ManimCommunity/manim/pull/2982)：将不稳定的测试重写为非[`text_mobject`](../reference/manim.mobject.text.text_mobject.html#module-manim.mobject.text.text_mobject "manim.mobject.text.text_mobject")图形化
+- [＃2982](https://github.com/ManimCommunity/manim/pull/2982)：将不稳定的测试重写为非[`text_mobject`]()图形化
 - [#2991](https://github.com/ManimCommunity/manim/pull/2991)：迁移`os.path`到`pathlib.Path`测试中
 - [＃3053](https://github.com/ManimCommunity/manim/pull/3053)：在帧比较测试中添加像素值错误的阈值
 
