--- a/changelogs/0.17.2-changelog.md
+++ b/changelogs/0.17.2-changelog.md
@@ -4,9 +4,9 @@
 
 ### 修复了错误
 
-- [#3089](https://github.com/ManimCommunity/manim/pull/3089) : 修复了 OpenGL mobjects，例如[`Surface`](../reference/manim.mobject.three_d.three_dimensions.Surface.html#manim.mobject.three_d.three_dimensions.Surface "manim.mobject. Three_d. Three_dimensions.Surface")通过重新排序 init 调用
+- [#3089](https://github.com/ManimCommunity/manim/pull/3089) : 修复了 OpenGL mobjects，例如[`Surface`]()通过重新排序 init 调用
 
-### 与文档相关的更改[#](#documentation-related-changes "此标题的固定链接")
+### 与文档相关的更改
 
 - [＃3073](https://github.com/ManimCommunity/manim/pull/3073)：修复了拼写错误：“是否”改为“是否”
 - [＃3074](https://github.com/ManimCommunity/manim/pull/3074)：修复了评论中的拼写错误
@@ -17,6 +17,6 @@
 - [#3079](https://github.com/ManimCommunity/manim/pull/3079) : 更新了运行程序版本 >= 2.298.2 的 CI 语法
 - [#3084](https://github.com/ManimCommunity/manim/pull/3084) : 正确设置 CodeQL
 
-### 新发布[#](#new-releases "此标题的固定链接")
+### 新发布
 
 - [#3090](https://github.com/ManimCommunity/manim/pull/3090)：准备了新的修补程序版本：`v0.17.2`
