--- a/changelogs/0.3.0-changelog.md
+++ b/changelogs/0.3.0-changelog.md
@@ -6,10 +6,10 @@
 
 ## 新功能
 
-- [#945](https://github.com/ManimCommunity/manim/pull/945)：mobject`change_layout()`的方法[`Graph`](../reference/manim.mobject.graph.Graph.html#manim.mobject.graph.Graph "manim.mobject.graph.Graph")
+- [#945](https://github.com/ManimCommunity/manim/pull/945)：mobject`change_layout()`的方法[`Graph`]()
 - [#943](https://github.com/ManimCommunity/manim/pull/943)：IPython %%manim 魔法
 - [#970](https://github.com/ManimCommunity/manim/pull/970) : 添加`--version`命令行标志
-- [#948](https://github.com/ManimCommunity/manim/pull/948)：允许将代码字符串传递给[`Code`](../reference/manim.mobject.text.code_mobject.Code.html#manim.mobject.text.code_mobject.Code "manim.mobject.text.code_mobject.Code")
+- [#948](https://github.com/ManimCommunity/manim/pull/948)：允许将代码字符串传递给[`Code`]()
 - [#917](https://github.com/ManimCommunity/manim/pull/917)：允许覆盖新式方法动画
 - [#756](https://github.com/ManimCommunity/manim/pull/756) : 允许通过配置文件设置 frame_height 和 frame_width
 - [#939](https://github.com/ManimCommunity/manim/pull/939)：添加了自定义字体文件支持
@@ -36,21 +36,21 @@
 - [#957](https://github.com/ManimCommunity/manim/pull/957)`NotImplementedError` ：尝试链接重写方法动画时引发
 - [#947](https://github.com/ManimCommunity/manim/pull/947)：一些修复和改进`PointCloundDot`
 - [#923](https://github.com/ManimCommunity/manim/pull/923)：文档：将开发人员的安装说明移至开发人员页面
-- [#964](https://github.com/ManimCommunity/manim/pull/964) : 为[`NumberLine`](../reference/manim.mobject.graphing.number_line.NumberLine.html#manim.mobject.graphing.number_line.NumberLine "manim.mobject.graphing.number_line.NumberLine")的单位向量添加了单元测试
-- [#960](https://github.com/ManimCommunity/manim/pull/960)：[`NumberLine`](../reference/manim.mobject.graphing.number_line.NumberLine.html#manim.mobject.graphing.number_line.NumberLine "manim.mobject.graphing.number_line.NumberLine")单位向量的大小应该是`unit_size`，而不是 1
+- [#964](https://github.com/ManimCommunity/manim/pull/964) : 为[`NumberLine`]()的单位向量添加了单元测试
+- [#960](https://github.com/ManimCommunity/manim/pull/960)：[`NumberLine`]()单位向量的大小应该是`unit_size`，而不是 1
 - [#958](https://github.com/ManimCommunity/manim/pull/958) : 修复代码格式`utils/debug.py`
 - [#953](https://github.com/ManimCommunity/manim/pull/953)：更新许可证年份
-- [#944](https://github.com/ManimCommunity/manim/pull/944) ：在和中插入笔划不透明度[`FadeIn`](../reference/manim.animation.fading.FadeIn.html#manim.animation.fading.FadeIn "manim.animation.fading.FadeIn")并更新`stroke_opacity`和` fill_opacity``set_stroke() `[`set_fill()`](../reference/manim.mobject.types.vectorized_mobject.VMobject.html#manim.mobject.types.vectorized_mobject.VMobject.set_fill "manim.mobject.types.vectorized_mobject.VMobject.set_fill")
+- [#944](https://github.com/ManimCommunity/manim/pull/944) ：在和中插入笔划不透明度[`FadeIn`]()并更新`stroke_opacity`和` fill_opacity``set_stroke() `[`set_fill()`]()
 - [＃865](https://github.com/ManimCommunity/manim/pull/865)：重命名`get_submobject_index_labels`为`index_labels`
-- [#941](https://github.com/ManimCommunity/manim/pull/941)：添加关键字参数`x_min`, `x_max`, `y_min`,`y_max`到[`ThreeDAxes`](../reference/manim.mobject.graphing.coordinate_systems.ThreeDAxes.html#manim.mobject.graphing.coordinate_systems.ThreeDAxes "manim.mobject.graphing.coordinate_systems.ThreeDAxes")
+- [#941](https://github.com/ManimCommunity/manim/pull/941)：添加关键字参数`x_min`, `x_max`, `y_min`,`y_max`到[`ThreeDAxes`]()
 - [#886](https://github.com/ManimCommunity/manim/pull/886) : 让渲染进度条再次显示有关渲染动画的详细信息
-- [#936](https://github.com/ManimCommunity/manim/pull/936) : 修复[`BulletedList`](../reference/manim.mobject.text.tex_mobject.BulletedList.html#manim.mobject.text.tex_mobject.BulletedList "manim.mobject.text.tex_mobject.BulletedList")TeX 环境问题并添加输入`get_module`
+- [#936](https://github.com/ManimCommunity/manim/pull/936) : 修复[`BulletedList`]()TeX 环境问题并添加输入`get_module`
 - [#938](https://github.com/ManimCommunity/manim/pull/938) : 删除对进度条的依赖
 - [#937](https://github.com/ManimCommunity/manim/pull/937) : 将 CI 管道的 'brew cask install' 更改为 'brew install –cask'
 - [#933](https://github.com/ManimCommunity/manim/pull/933)：让矩阵再次与列表一起使用
 - [#932](https://github.com/ManimCommunity/manim/pull/932)：正确解析`log_dir`选项
-- [#920](https://github.com/ManimCommunity/manim/pull/920) : 如果标记[`MarkupText`](../reference/manim.mobject.text.text_mobject.MarkupText.html#manim.mobject.text.text_mobject.MarkupText "manim.mobject.text.text_mobject.MarkupText")无效则引发错误
-- [#929](https://github.com/ManimCommunity/manim/pull/929)[`Matrix`](../reference/manim.mobject.matrix.Matrix.html#manim.mobject.matrix.Matrix "manim.mobject.matrix.Matrix") : 如果使用 < 2 维输入创建对象，则会引发错误
+- [#920](https://github.com/ManimCommunity/manim/pull/920) : 如果标记[`MarkupText`]()无效则引发错误
+- [#929](https://github.com/ManimCommunity/manim/pull/929)[`Matrix`]() : 如果使用 < 2 维输入创建对象，则会引发错误
 - [#907](https://github.com/ManimCommunity/manim/pull/907) : 让 Scene.add_sound 再次工作（当使用 运行时`--disable_caching`）
 - [#906](https://github.com/ManimCommunity/manim/pull/906) : 允许在动画组中使用新式方法动画
 - [#908](https://github.com/ManimCommunity/manim/pull/908) : 从文档中删除了已弃用的命令行参数
