--- a/changelogs/0.4.0-changelog.md
+++ b/changelogs/0.4.0-changelog.md
@@ -10,8 +10,8 @@
 
 ## 新功能
 
-- [#1026](https://github.com/ManimCommunity/manim/pull/1026) : 添加 3D Mobjects : [`Cone`](../reference/manim.mobject.three_d.three_dimensions.Cone.html#manim.mobject.three_d.three_dimensions.Cone "manim.mobject. Three_d. Three_dimensions.Cone")、[`Cylinder`](../reference/manim.mobject.three_d.three_dimensions.Cylinder.html#manim.mobject.three_d.three_dimensions.Cylinder "manim.mobject. Three_d. Three_dimensions.Cylinder")、[`Line3D`](../reference/manim.mobject.three_d.three_dimensions.Line3D.html#manim.mobject.three_d.three_dimensions.Line3D "manim.mobject. Three_d. Three_dimensions.Line3D")和[`Arrow3D`](../reference/manim.mobject.three_d.three_dimensions.Arrow3D.html#manim.mobject.three_d.three_dimensions.Arrow3D "manim.mobject. Three_d. Three_dimensions.Arrow3D")[`Torus`](../reference/manim.mobject.three_d.three_dimensions.Torus.html#manim.mobject.three_d.three_dimensions.Torus "manim.mobject. Three_d. Three_dimensions.Torus")
-- [＃1047](https://github.com/ManimCommunity/manim/pull/1047)：添加文档和示例[`Matrix`](../reference/manim.mobject.matrix.Matrix.html#manim.mobject.matrix.Matrix "manim.mobject.matrix.Matrix")
+- [#1026](https://github.com/ManimCommunity/manim/pull/1026) : 添加 3D Mobjects : [`Cone`]()、[`Cylinder`]()、[`Line3D`]()和[`Arrow3D`]()[`Torus`]()
+- [＃1047](https://github.com/ManimCommunity/manim/pull/1047)：添加文档和示例[`Matrix`]()
 - [#1044](https://github.com/ManimCommunity/manim/pull/1044)：`register_font`适用于 macOS
 - [#995](https://github.com/ManimCommunity/manim/pull/995) :在属性和/方法`set()`之间添加通用方法和兼容层` get_*``set_* `
 
@@ -20,32 +20,32 @@
 - [#981](https://github.com/ManimCommunity/manim/pull/981)：修复了 Windows 上 WebGL 渲染器的热重载功能
 - [＃1053](https://github.com/ManimCommunity/manim/pull/1053)：修复稳定版本文档中源代码的链接
 - [#1067](https://github.com/ManimCommunity/manim/pull/1067) : 将 ManimPango 添加到 ReadTheDocs 要求
-- [#1058](https://github.com/ManimCommunity/manim/pull/1058)：`<color>`用 Pango 替换语法来为 MarkupText 的部分着色，并允许在 MarkupText 中使用下划线、上划线和删除线的颜色`<span foreground>`[`MarkupText`](../reference/manim.mobject.text.text_mobject.MarkupText.html#manim.mobject.text.text_mobject.MarkupText "manim.mobject.text.text_mobject.MarkupText")
+- [#1058](https://github.com/ManimCommunity/manim/pull/1058)：`<color>`用 Pango 替换语法来为 MarkupText 的部分着色，并允许在 MarkupText 中使用下划线、上划线和删除线的颜色`<span foreground>`[`MarkupText`]()
 - [＃1063](https://github.com/ManimCommunity/manim/pull/1063)：修复相关文档`.animate`
 - [＃1065](https://github.com/ManimCommunity/manim/pull/1065)：删除重复的单词“向量”
 - [#1060](https://github.com/ManimCommunity/manim/pull/1060) : 更新 Linux 安装说明以提及 Pango 的安装
-- [#1050](https://github.com/ManimCommunity/manim/pull/1050)：确保用户提供的描边颜色和宽度应用于[`Cross`](../reference/manim.mobject.geometry.shape_matchers.Cross.html#manim.mobject.geometry.shape_matchers.Cross "manim.mobject.geometry.shape_matchers.Cross")
+- [#1050](https://github.com/ManimCommunity/manim/pull/1050)：确保用户提供的描边颜色和宽度应用于[`Cross`]()
 - [#1059](https://github.com/ManimCommunity/manim/pull/1059) : 访问未处理的 mobject 属性时出现更多描述性错误
 - [＃1048](https://github.com/ManimCommunity/manim/pull/1048)：在中使用绝对路径`make_and_open_docs.py`
 - [#1000](https://github.com/ManimCommunity/manim/pull/1000)：删除`MovingCameraScene.setup`并`MovingCameraScene.camera_frame`
-- [＃1051](https://github.com/ManimCommunity/manim/pull/1051)：更正了设置笔画相关属性的问题[`VMobject`](../reference/manim.mobject.types.vectorized_mobject.VMobject.html#manim.mobject.types.vectorized_mobject.VMobject "manim.mobject.types.vectorized_mobject.VMobject")
-- [#1043](https://github.com/ManimCommunity/manim/pull/1043)：[`CubicBezier`](../reference/manim.mobject.geometry.arc.CubicBezier.html#manim.mobject.geometry.arc.CubicBezier "manim.mobject.geometry.arc.CubicBezier")明确接受四点
+- [＃1051](https://github.com/ManimCommunity/manim/pull/1051)：更正了设置笔画相关属性的问题[`VMobject`]()
+- [#1043](https://github.com/ManimCommunity/manim/pull/1043)：[`CubicBezier`]()明确接受四点
 - [＃1046](https://github.com/ManimCommunity/manim/pull/1046)：使用任何版本`importlib-metadata`
 - [#1030](https://github.com/ManimCommunity/manim/pull/1030) : 解析`.log`文件并尝试在编译失败时打印 LaTeX 错误
 - [＃1015](https://github.com/ManimCommunity/manim/pull/1015)：文档：添加与以下内容相关的更明确的说明`tlmgr`
 - [#1028](https://github.com/ManimCommunity/manim/pull/1028)：文档：使用 Apple Silicon 更新 mac 上的安装指南
 - [＃1032](https://github.com/ManimCommunity/manim/pull/1032)：删除`Square.side_length`财产
 - [＃1031](https://github.com/ManimCommunity/manim/pull/1031)：修复维基百科矢量图形页面的链接
-- [＃1021](https://github.com/ManimCommunity/manim/pull/1021)：文档：添加示例[`CubicBezier`](../reference/manim.mobject.geometry.arc.CubicBezier.html#manim.mobject.geometry.arc.CubicBezier "manim.mobject.geometry.arc.CubicBezier")
+- [＃1021](https://github.com/ManimCommunity/manim/pull/1021)：文档：添加示例[`CubicBezier`]()
 - [#1017](https://github.com/ManimCommunity/manim/pull/1017)：添加`progress_bar`以`digest_args`修复`--progress_bar`CLI 标志
-- [#1018](https://github.com/ManimCommunity/manim/pull/1018)：删除[`FunctionGraph`](../reference/manim.mobject.graphing.functions.FunctionGraph.html#manim.mobject.graphing.functions.FunctionGraph "manim.mobject.graphing.functions.FunctionGraph")参数中的冗余
+- [#1018](https://github.com/ManimCommunity/manim/pull/1018)：删除[`FunctionGraph`]()参数中的冗余
 - [#1024](https://github.com/ManimCommunity/manim/pull/1024)`width` : //迁移`height`到`depth`属性
 - [#1022](https://github.com/ManimCommunity/manim/pull/1022) : 修复`-p`通过时的标志`-s`
 - [＃1008](https://github.com/ManimCommunity/manim/pull/1008)：CI 管道：修复发布资产上传
 - [#983](https://github.com/ManimCommunity/manim/pull/983)：确保更新器动画的最后一帧是正确的
 - [#984](https://github.com/ManimCommunity/manim/pull/984)：将 manim 版本添加到 CLI 输出，附加生成的版本名称`.gif`和`.png`文件，将版本添加到渲染视频的元数据，将深蓝色终端文本更改为默认绿色
-- [#993](https://github.com/ManimCommunity/manim/pull/993) : 通过传递颜色列表来修复将 Mobject 颜色设置为渐变的问题[`set_color()`](../reference/manim.mobject.types.vectorized_mobject.VMobject.html#manim.mobject.types.vectorized_mobject.VMobject.set_color "manim.mobject.types.vectorized_mobject.VMobject.set_color")
-- [＃1003](https://github.com/ManimCommunity/manim/pull/1003)：修复动画[`GrowArrow`](../reference/manim.animation.growing.GrowArrow.html#manim.animation.growing.GrowArrow "manim.animation.growing.GrowArrow")
+- [#993](https://github.com/ManimCommunity/manim/pull/993) : 通过传递颜色列表来修复将 Mobject 颜色设置为渐变的问题[`set_color()`]()
+- [＃1003](https://github.com/ManimCommunity/manim/pull/1003)：修复动画[`GrowArrow`]()
 - [#1010](https://github.com/ManimCommunity/manim/pull/1010)：禁用 ffmpeg concat 的 STDIN 交互。
 - [#969](https://github.com/ManimCommunity/manim/pull/969)：修复`--tex_template`CLI 标志
 - [#989](https://github.com/ManimCommunity/manim/pull/989)：修复子命令`manim cfg export`
