--- a/changelogs/0.6.0-changelog.md
+++ b/changelogs/0.6.0-changelog.md
@@ -6,11 +6,11 @@
 
 - [#1347](https://github.com/ManimCommunity/manim/pull/1347) : 重构 vector_field 模块并添加文档
 
-  :class`~.VectorField` 被重命名为，并添加[`ArrowVectorField`](../reference/manim.mobject.vector_field.ArrowVectorField.html#manim.mobject.vector_field.ArrowVectorField "manim.mobject.vector_field.ArrowVectorField")一个新类作为和 的超类。已移除。它的功能已转移到. 使用矢量场时添加了许多新选项。被移至指示模块。[`VectorField`](../reference/manim.mobject.vector_field.VectorField.html#manim.mobject.vector_field.VectorField "manim.mobject.vector_field.VectorField")[`ArrowVectorField`](../reference/manim.mobject.vector_field.ArrowVectorField.html#manim.mobject.vector_field.ArrowVectorField "manim.mobject.vector_field.ArrowVectorField")[`StreamLines`](../reference/manim.mobject.vector_field.StreamLines.html#manim.mobject.vector_field.StreamLines "manim.mobject.vector_field.StreamLines")`AnimatedStreamLines`[`StreamLines`](../reference/manim.mobject.vector_field.StreamLines.html#manim.mobject.vector_field.StreamLines "manim.mobject.vector_field.StreamLines")[`ShowPassingFlashWithThinningStrokeWidth`](../reference/manim.animation.indication.ShowPassingFlashWithThinningStrokeWidth.html#manim.animation.indication.ShowPassingFlashWithThinningStrokeWidth "manim.animation.inspiration.ShowPassingFlashWithThinningStrokeWidth")
+  :class`~.VectorField` 被重命名为，并添加[`ArrowVectorField`]()一个新类作为和 的超类。已移除。它的功能已转移到. 使用矢量场时添加了许多新选项。被移至指示模块。[`VectorField`]()[`ArrowVectorField`]()[`StreamLines`]()`AnimatedStreamLines`[`StreamLines`]()[`ShowPassingFlashWithThinningStrokeWidth`]()
 
 - [#1161](https://github.com/ManimCommunity/manim/pull/1161)：升级坐标系统和绘图。
 
-  [`Axes`](../reference/manim.mobject.graphing.coordinate_systems.Axes.html#manim.mobject.graphing.coordinate_systems.Axes "manim.mobject.graphing.coordinate_systems.Axes")对、和进行了重大更改[`ThreeDAxes`](../reference/manim.mobject.graphing.coordinate_systems.ThreeDAxes.html#manim.mobject.graphing.coordinate_systems.ThreeDAxes "manim.mobject.graphing.coordinate_systems.ThreeDAxes")， 以上所有内容现在都使用列表来构造其范围，而不是显式定义这些值。x_range 已取代 x_min、x_max ，并且使用 x_step –\> : 定义步长要容易得多。这些类别还进行了许多升级，改善了它们的功能和外观。[`NumberPlane`](../reference/manim.mobject.graphing.coordinate_systems.NumberPlane.html#manim.mobject.graphing.coordinate_systems.NumberPlane "manim.mobject.graphing.coordinate_systems.NumberPlane")[`NumberLine`](../reference/manim.mobject.graphing.number_line.NumberLine.html#manim.mobject.graphing.number_line.NumberLine "manim.mobject.graphing.number_line.NumberLine")` x_range``[x_min, x_max, x_step] `
+  [`Axes`]()对、和进行了重大更改[`ThreeDAxes`]()， 以上所有内容现在都使用列表来构造其范围，而不是显式定义这些值。x_range 已取代 x_min、x_max ，并且使用 x_step –\> : 定义步长要容易得多。这些类别还进行了许多升级，改善了它们的功能和外观。[`NumberPlane`]()[`NumberLine`]()` x_range``[x_min, x_max, x_step] `
 
   `NumberLineOld`引入是为了继续支持`GraphScene`，尽管我们正在放弃 GraphScene 并打算在未来版本中弃用它。
 
@@ -57,7 +57,7 @@
 
   输入文件修改后重新运行场景
 
-- [#1383](https://github.com/ManimCommunity/manim/pull/1383)：[`indication`](../reference/manim.animation.indication.html#module-manim.animation.indication "动画指示")模块接口的检修
+- [#1383](https://github.com/ManimCommunity/manim/pull/1383)：[`indication`]()模块接口的检修
 
   - 添加了 Circumscribe 类，组合了 CircleIndicate、AnimationOnSurroundingRectangle、ShowPassingFlashAround、ShowCreationThenDestructionAround、ShowCreationThenFadeAround 的功能，这些功能均已弃用。
   - Flash 的更改：flash_radius 参数现在定义动画的内半径。添加了新参数 time_width。
@@ -67,10 +67,10 @@
   - 为上述所有内容添加了文档和示例
   - 其他小的改进和错误修复
 
-- [＃1348](https://github.com/ManimCommunity/manim/pull/1348)：添加，[`Polyhedron`](../reference/manim.mobject.three_d.polyhedra.Polyhedron.html#manim.mobject.three_d.polyhedra.Polyhedron "manim.mobject.two_d.polyhedra.Polyhedron")和柏拉图固体[`Tetrahedron`](../reference/manim.mobject.three_d.polyhedra.Tetrahedron.html#manim.mobject.three_d.polyhedra.Tetrahedron "manim.mobject. Three_d.polyhedra.Tetrahedron")，，[`Octahedron`](../reference/manim.mobject.three_d.polyhedra.Octahedron.html#manim.mobject.three_d.polyhedra.Octahedron "manim.mobject.two_d.多面体.八面体")和[`Icosahedron`](../reference/manim.mobject.three_d.polyhedra.Icosahedron.html#manim.mobject.three_d.polyhedra.Icosahedron "manim.mobject. Three_d.polyhedra.Icosahedron")[`Dodecahedron`](../reference/manim.mobject.three_d.polyhedra.Dodecahedron.html#manim.mobject.three_d.polyhedra.Dodecahedron "manim.mobject.two_d.polyhedra.十二面体")
-- [#1285](https://github.com/ManimCommunity/manim/pull/1285) : 添加[`interactive_embed()`](../reference/manim.scene.scene.Scene.html#manim.scene.scene.Scene.interactive_embed "manim.scene.scene.Scene.interactive_embed")OpenGL 渲染
+- [＃1348](https://github.com/ManimCommunity/manim/pull/1348)：添加，[`Polyhedron`]()和柏拉图固体[`Tetrahedron`]()，，[`Octahedron`]()和[`Icosahedron`]()[`Dodecahedron`]()
+- [#1285](https://github.com/ManimCommunity/manim/pull/1285) : 添加[`interactive_embed()`]()OpenGL 渲染
 
-  [`interactive_embed()`](../reference/manim.scene.scene.Scene.html#manim.scene.scene.Scene.interactive_embed "manim.scene.scene.Scene.interactive_embed")允许通过鼠标和键盘与场景交互，以及通过 iPython 终端进行动态命令。
+  [`interactive_embed()`]()允许通过鼠标和键盘与场景交互，以及通过 iPython 终端进行动态命令。
 
 - [#1261](https://github.com/ManimCommunity/manim/pull/1261)：如果场景中没有播放动画，则自动渲染图像
 
@@ -86,13 +86,13 @@
 
   range_in_grid 现在实际上在网格中排列子对象。添加了新参数 buff、cell_alignment、row_alignments、col_alignments、row_heights、col_widths、flow_order。
 
-- [＃1407](https://github.com/ManimCommunity/manim/pull/1407)：修复错误并将其重命名`vector_coordinate_label()`为[`coordinate_label()`](../reference/manim.mobject.geometry.line.Vector.html#manim.mobject.geometry.line.Vector.coordinate_label "manim.mobject.geometry.line.Vector.coordinate_label")并将其移动到`geometry.py`
+- [＃1407](https://github.com/ManimCommunity/manim/pull/1407)：修复错误并将其重命名`vector_coordinate_label()`为[`coordinate_label()`]()并将其移动到`geometry.py`
 - [#1380](https://github.com/ManimCommunity/manim/pull/1380)：允许图像对象作为背景图像
 - [#1391](https://github.com/ManimCommunity/manim/pull/1391) : 将 path_arc 支持添加到.animate 语法
 
-  参数 path_arc 现在[`Transform`](../reference/manim.animation.transform.Transform.html#manim.animation.transform.Transform "manim.animation.transform.Transform")适用于.animate 语法
+  参数 path_arc 现在[`Transform`]()适用于.animate 语法
 
-- [＃1364](https://github.com/ManimCommunity/manim/pull/1364)：添加[`match_points()`](../reference/manim.mobject.mobject.Mobject.html#manim.mobject.mobject.Mobject.match_points "manim.mobject.mobject.Mobject.match_points")
+- [＃1364](https://github.com/ManimCommunity/manim/pull/1364)：添加[`match_points()`]()
 
   - 添加了`match_points()`，它可以转换 Mobject 的点、位置和子对象以匹配另一个 Mobject，同时保持样式不变。
 
@@ -110,30 +110,30 @@
 
   TexTemplate() 现在返回一个简单的 tex 模板。
 
-- [#1321](https://github.com/ManimCommunity/manim/pull/1321) : 添加 OpenGL 支持[`AnimationGroup`](../reference/manim.animation.composition.AnimationGroup.html#manim.animation.composition.AnimationGroup "manim.animation.composition.AnimationGroup")
-- [＃1302](https://github.com/ManimCommunity/manim/pull/1302)：提出适当的错误[`point_from_proportion()`](../reference/manim.mobject.types.vectorized_mobject.VMobject.html#manim.mobject.types.vectorized_mobject.VMobject.point_from_proportion "manim.mobject.types.vectorized_mobject.VMobject.point_from_proportion")
+- [#1321](https://github.com/ManimCommunity/manim/pull/1321) : 添加 OpenGL 支持[`AnimationGroup`]()
+- [＃1302](https://github.com/ManimCommunity/manim/pull/1302)：提出适当的错误[`point_from_proportion()`]()
 
   - `alpha`如果参数不在 0 和 1 之间，则引发错误。
-  - [`VMobject`](../reference/manim.mobject.types.vectorized_mobject.VMobject.html#manim.mobject.types.vectorized_mobject.VMobject "manim.mobject.types.vectorized_mobject.VMobject")如果没有分数，则引发错误。
+  - [`VMobject`]()如果没有分数，则引发错误。
 
-- [#1315](https://github.com/ManimCommunity/manim/pull/1315) : 修复[`get_arc_length()`](../reference/manim.mobject.types.vectorized_mobject.VMobject.html#manim.mobject.types.vectorized_mobject.VMobject.get_arc_length "manim.mobject.types.vectorized_mobject.VMobject.get_arc_length")源自[#1274 的性能问题](https://github.com/ManimCommunity/manim/pull/1274)
+- [#1315](https://github.com/ManimCommunity/manim/pull/1315) : 修复[`get_arc_length()`]()源自[#1274 的性能问题](https://github.com/ManimCommunity/manim/pull/1274)
 - [#1320](https://github.com/ManimCommunity/manim/pull/1320) : 将 jpeg 扩展名添加到默认图像扩展名中
-- [＃1234](https://github.com/ManimCommunity/manim/pull/1234)：添加了新方法[`get_midpoint()`](../reference/manim.mobject.mobject.Mobject.html#manim.mobject.mobject.Mobject.get_midpoint "manim.mobject.mobject.Mobject.get_midpoint")
+- [＃1234](https://github.com/ManimCommunity/manim/pull/1234)：添加了新方法[`get_midpoint()`]()
 
-  实现[`get_midpoint()`](../reference/manim.mobject.mobject.Mobject.html#manim.mobject.mobject.Mobject.get_midpoint "manim.mobject.mobject.Mobject.get_midpoint")以返回 mobject 笔画线的中间点。
+  实现[`get_midpoint()`]()以返回 mobject 笔画线的中间点。
 
 - [#1237](https://github.com/ManimCommunity/manim/pull/1237)：通知用户是否使用过时版本的 Manim
-- [＃1308](https://github.com/ManimCommunity/manim/pull/1308)：改进的[`ManimBanner`](../reference/manim.mobject.logo.ManimBanner.html#manim.mobject.logo.ManimBanner "manim.mobject.logo.ManimBanner")动画
-- [#1275](https://github.com/ManimCommunity/manim/pull/1275) : 添加 SVG <line> 元素支持[`SVGMobject`](../reference/manim.mobject.svg.svg_mobject.SVGMobject.html#manim.mobject.svg.svg_mobject.SVGMobject "manim.mobject.svg.svg_mobject.SVGMobject")
-- [#1238](https://github.com/ManimCommunity/manim/pull/1238) : 添加`about_point`参数[`rotate()`](../reference/manim.mobject.mobject.Mobject.html#manim.mobject.mobject.Mobject.rotate "manim.mobject.mobject.Mobject.旋转")
+- [＃1308](https://github.com/ManimCommunity/manim/pull/1308)：改进的[`ManimBanner`]()动画
+- [#1275](https://github.com/ManimCommunity/manim/pull/1275) : 添加 SVG <line> 元素支持[`SVGMobject`]()
+- [#1238](https://github.com/ManimCommunity/manim/pull/1238) : 添加`about_point`参数[`rotate()`]()
 - [#1260](https://github.com/ManimCommunity/manim/pull/1260)：将大括号从 Tex 更改为 SVG (#1258)
 - [#1122](https://github.com/ManimCommunity/manim/pull/1122)：支持为单个 ImageMobject 指定插值算法
-- [#1283](https://github.com/ManimCommunity/manim/pull/1283) : 将关键字的默认值设置`random_seed`为（之前[`Scene`](../reference/manim.scene.scene.Scene.html#manim.scene.scene.Scene "手动场景.场景.场景")为`None`0 并固定）
-- [#1220](https://github.com/ManimCommunity/manim/pull/1220)[`add_to_back()`](../reference/manim.mobject.mobject.Mobject.html#manim.mobject.mobject.Mobject.add_to_back "manim.mobject.mobject.Mobject.add_to_back") ：为 Mobject 添加健全性检查
+- [#1283](https://github.com/ManimCommunity/manim/pull/1283) : 将关键字的默认值设置`random_seed`为（之前[`Scene`]()为`None`0 并固定）
+- [#1220](https://github.com/ManimCommunity/manim/pull/1220)[`add_to_back()`]() ：为 Mobject 添加健全性检查
 
   添加 Mobject add_to_back 健全性检查： \- 当 Mobject 尝试添加自身时引发 ValueError - 添加非 Mobject 时引发 TypeError - 如果列表中至少存在该子对象的一个 ​​ 实例，则过滤掉传入的重复子对象
 
-- [#1249](https://github.com/ManimCommunity/manim/pull/1249)[`Rectangle`](../reference/manim.mobject.geometry.polygram.Rectangle.html#manim.mobject.geometry.polygram.Rectangle "manim.mobject.geometry.polygram.矩形") ：按逆时针方向设置角
+- [#1249](https://github.com/ManimCommunity/manim/pull/1249)[`Rectangle`]() ：按逆时针方向设置角
 
   这改善了矩形和其他简单对象之间转换的外观。
 
@@ -142,19 +142,19 @@
 ### 修复了错误
 
 - [＃1368](https://github.com/ManimCommunity/manim/pull/1368)：添加了检查以确保检查最新版本成功
-- [#1413](https://github.com/ManimCommunity/manim/pull/1413) : 通过添加到子对象时防止相同对象的重复[`add_to_back()`](../reference/manim.mobject.mobject.Mobject.html#manim.mobject.mobject.Mobject.add_to_back "manim.mobject.mobject.Mobject.add_to_back")
+- [#1413](https://github.com/ManimCommunity/manim/pull/1413) : 通过添加到子对象时防止相同对象的重复[`add_to_back()`]()
 
   修复#1412
 
 - [#1395](https://github.com/ManimCommunity/manim/pull/1395) : SVG 转换现在处理指数符号 (6.02e23)
 - [#1355](https://github.com/ManimCommunity/manim/pull/1355) : 重写 put_start_and_end_on 以在 3D 中工作
-- [＃1346](https://github.com/ManimCommunity/manim/pull/1346)：修复了杂散打印引入的错误[`MathTex`](../reference/manim.mobject.text.tex_mobject.MathTex.html#manim.mobject.text.tex_mobject.MathTex "manim.mobject.text.tex_mobject.MathTex")
+- [＃1346](https://github.com/ManimCommunity/manim/pull/1346)：修复了杂散打印引入的错误[`MathTex`]()
 - [#1305](https://github.com/ManimCommunity/manim/pull/1305) : 自动删除不在范围内的长刻度线`NumberLine`
 - [#1296](https://github.com/ManimCommunity/manim/pull/1296) : 修复随机管道 TeX 故障
-- [＃1274](https://github.com/ManimCommunity/manim/pull/1274)：修复[`point_from_proportion()`](../reference/manim.mobject.types.vectorized_mobject.VMobject.html#manim.mobject.types.vectorized_mobject.VMobject.point_from_proportion "manim.mobject.types.vectorized_mobject.VMobject.point_from_proportion")以考虑曲线的长度。
+- [＃1274](https://github.com/ManimCommunity/manim/pull/1274)：修复[`point_from_proportion()`]()以考虑曲线的长度。
 
-  - 添加[`get_nth_curve_function_with_length()`](../reference/manim.mobject.types.vectorized_mobject.VMobject.html#manim.mobject.types.vectorized_mobject.VMobject.get_nth_curve_function_with_length "manim.mobject.types.vectorized_mobject.VMobject.get_nth_curve_function_with_length")相关功能。
-  - 更改[`point_from_proportion()`](../reference/manim.mobject.types.vectorized_mobject.VMobject.html#manim.mobject.types.vectorized_mobject.VMobject.point_from_proportion "manim.mobject.types.vectorized_mobject.VMobject.point_from_proportion")为使用这些函数来考虑曲线长度。
+  - 添加[`get_nth_curve_function_with_length()`]()相关功能。
+  - 更改[`point_from_proportion()`]()为使用这些函数来考虑曲线长度。
 
 ### 与文档相关的更改
 
@@ -188,18 +188,18 @@
 - [#1335](https://github.com/ManimCommunity/manim/pull/1335) : 在文档中的示例中添加了导入语句
 - [#1245](https://github.com/ManimCommunity/manim/pull/1245) : 添加填充角度示例
 - [＃1328](https://github.com/ManimCommunity/manim/pull/1328)：文档：更新大括号示例
-- [#1326](https://github.com/ManimCommunity/manim/pull/1326)：改进文档[`ManimMagic`](../reference/manim.utils.ipython_magic.ManimMagic.html#manim.utils.ipython_magic.ManimMagic "manim.utils.ipython_magic.ManimMagic")（特别是：修复 CLI 标志的文档顺序）
+- [#1326](https://github.com/ManimCommunity/manim/pull/1326)：改进文档[`ManimMagic`]()（特别是：修复 CLI 标志的文档顺序）
 - [#1323](https://github.com/ManimCommunity/manim/pull/1323)：黑化文档字符串
-- [＃1300](https://github.com/ManimCommunity/manim/pull/1300)：添加了类型提示[`ValueTracker`](../reference/manim.mobject.value_tracker.ValueTracker.html#manim.mobject.value_tracker.ValueTracker "manim.mobject.value_tracker.ValueTracker")
-- [＃1301](https://github.com/ManimCommunity/manim/pull/1301)：添加了更多文档字符串和类型提示[`Mobject`](../reference/manim.mobject.mobject.Mobject.html#manim.mobject.mobject.Mobject "manim.mobject.mobject.Mobject")
+- [＃1300](https://github.com/ManimCommunity/manim/pull/1300)：添加了类型提示[`ValueTracker`]()
+- [＃1301](https://github.com/ManimCommunity/manim/pull/1301)：添加了更多文档字符串和类型提示[`Mobject`]()
 - [#1298](https://github.com/ManimCommunity/manim/pull/1298) : 为第一个代码示例添加双反引号（value_tracker.py）
 - [#1297](https://github.com/ManimCommunity/manim/pull/1297) : 更改文档以使用 viewcode 扩展而不是 linkcode
 
   切换`sphinx.ext.linkcode`到并在 中`sphinx.ext.viewcode`删除。` linkcode_resolve``conf.py `
 
-- [＃1246](https://github.com/ManimCommunity/manim/pull/1246)：添加了文档字符串[`ValueTracker`](../reference/manim.mobject.value_tracker.ValueTracker.html#manim.mobject.value_tracker.ValueTracker "manim.mobject.value_tracker.ValueTracker")
+- [＃1246](https://github.com/ManimCommunity/manim/pull/1246)：添加了文档字符串[`ValueTracker`]()
 - [#1251](https://github.com/ManimCommunity/manim/pull/1251) : 将文档从 guzzle-sphinx-theme 切换到 Furo
-- [#1232](https://github.com/ManimCommunity/manim/pull/1232)：更多文档字符串和示例[`Mobject`](../reference/manim.mobject.mobject.Mobject.html#manim.mobject.mobject.Mobject "manim.mobject.mobject.Mobject")
+- [#1232](https://github.com/ManimCommunity/manim/pull/1232)：更多文档字符串和示例[`Mobject`]()
 - [#1291](https://github.com/ManimCommunity/manim/pull/1291)：README.md 中的语法改进
 - [＃1269](https://github.com/ManimCommunity/manim/pull/1269)：添加有关的文档`set_color_by_tex()`
 - [#1284](https://github.com/ManimCommunity/manim/pull/1284)：通过提供 example_scenes 的正确链接更新了自述文件
