--- a/changelogs/0.7.0-changelog.md
+++ b/changelogs/0.7.0-changelog.md
@@ -4,10 +4,10 @@
 
 ### 重大变更
 
-- [#1521](https://github.com/ManimCommunity/manim/pull/1521)：改进[`Animation`](../reference/manim.animation.animation.Animation.html#manim.animation.animation.Animation "manim.animation.animation.Animation")文档
+- [#1521](https://github.com/ManimCommunity/manim/pull/1521)：改进[`Animation`]()文档
 
-  - 改进[`Animation`](../reference/manim.animation.animation.Animation.html#manim.animation.animation.Animation "manim.animation.animation.Animation")课程的文档。
-  - 统一签名`get_all_mobjects`。现在它总是返回一个[`Mobjects`](../reference/manim.mobject.mobject.Mobject.html#manim.mobject.mobject.Mobject "manim.mobject.mobject.Mobject"). 这会破坏使用 `FadeTransform.get_all_mobjects`as `Group`。
+  - 改进[`Animation`]()课程的文档。
+  - 统一签名`get_all_mobjects`。现在它总是返回一个[`Mobjects`](). 这会破坏使用 `FadeTransform.get_all_mobjects`as `Group`。
 
 - [#1470](https://github.com/ManimCommunity/manim/pull/1470)：放弃对 Python 3.6 的支持
 
@@ -15,15 +15,15 @@
 
 ### 亮点
 
-- [＃1447](https://github.com/ManimCommunity/manim/pull/1447)：添加[`PolarPlane`](../reference/manim.mobject.graphing.coordinate_systems.PolarPlane.html#manim.mobject.graphing.coordinate_systems.PolarPlane "manim.mobject.graphing.coordinate_systems.PolarPlane")了极坐标。
-- [#1490](https://github.com/ManimCommunity/manim/pull/1490) : 添加[`Polygram`](../reference/manim.mobject.geometry.polygram.Polygram.html#manim.mobject.geometry.polygram.Polygram "manim.mobject.geometry.polygram.Polygram")，重新设计多边形继承树，并添加[`Star`](../reference/manim.mobject.geometry.polygram.Star.html#manim.mobject.geometry.polygram.Star "manim.mobject.geometry.polygram.Star")
+- [＃1447](https://github.com/ManimCommunity/manim/pull/1447)：添加[`PolarPlane`]()了极坐标。
+- [#1490](https://github.com/ManimCommunity/manim/pull/1490) : 添加[`Polygram`]()，重新设计多边形继承树，并添加[`Star`]()
 
-  - Add [`Polygram`](../reference/manim.mobject.geometry.polygram.Polygram.html#manim.mobject.geometry.polygram.Polygram "manim.mobject.geometry.polygram.Polygram")，一个[`Polygon`](../reference/manim.mobject.geometry.polygram.Polygon.html#manim.mobject.geometry.polygram.Polygon "manim.mobject.geometry.polygram.Polygon")允许断开连接的边集的广义化。
-  - 使[`Polygon`](../reference/manim.mobject.geometry.polygram.Polygon.html#manim.mobject.geometry.polygram.Polygon "manim.mobject.geometry.polygram.Polygon")继承自[`Polygram`](../reference/manim.mobject.geometry.polygram.Polygram.html#manim.mobject.geometry.polygram.Polygram "manim.mobject.geometry.polygram.Polygram").
-  - 添加[`regular_vertices()`](../reference/manim.utils.space_ops.html#manim.utils.space_ops.regular_vertices "manim.utils.space_ops.regular_vertices")
-  - 添加[`RegularPolygram`](../reference/manim.mobject.geometry.polygram.RegularPolygram.html#manim.mobject.geometry.polygram.RegularPolygram "manim.mobject.geometry.polygram.RegularPolygram")。
-  - 使[`RegularPolygon`](../reference/manim.mobject.geometry.polygram.RegularPolygon.html#manim.mobject.geometry.polygram.RegularPolygon "manim.mobject.geometry.polygram.RegularPolygon")继承自[`RegularPolygram`](../reference/manim.mobject.geometry.polygram.RegularPolygram.html#manim.mobject.geometry.polygram.RegularPolygram "manim.mobject.geometry.polygram.RegularPolygram").
-  - 添加[`Star`](../reference/manim.mobject.geometry.polygram.Star.html#manim.mobject.geometry.polygram.Star "manim.mobject.geometry.polygram.Star")。
+  - Add [`Polygram`]()，一个[`Polygon`]()允许断开连接的边集的广义化。
+  - 使[`Polygon`]()继承自[`Polygram`]().
+  - 添加[`regular_vertices()`]()
+  - 添加[`RegularPolygram`]()。
+  - 使[`RegularPolygon`]()继承自[`RegularPolygram`]().
+  - 添加[`Star`]()。
 
 - [#1462](https://github.com/ManimCommunity/manim/pull/1462)：OpenGL：添加`Shader`、、`Mesh`和`FullScreenQuad`
 
@@ -37,26 +37,26 @@
 
 ### 已弃用的类和函数
 
-- [#1598](https://github.com/ManimCommunity/manim/pull/1598)：更新示例以使用[`Axes`](../reference/manim.mobject.graphing.coordinate_systems.Axes.html#manim.mobject.graphing.coordinate_systems.Axes "manim.mobject.graphing.coordinate_systems.Axes")和弃用`GraphScene`
+- [#1598](https://github.com/ManimCommunity/manim/pull/1598)：更新示例以使用[`Axes`]()和弃用`GraphScene`
 
-  `GraphScene`已被弃用，其功能已转移到[`Axes`](../reference/manim.mobject.graphing.coordinate_systems.Axes.html#manim.mobject.graphing.coordinate_systems.Axes "manim.mobject.graphing.coordinate_systems.Axes"). 有关示例用法，请参阅更新的示例库。
+  `GraphScene`已被弃用，其功能已转移到[`Axes`](). 有关示例用法，请参阅更新的示例库。
 
 - [#1454](https://github.com/ManimCommunity/manim/pull/1454)：淡入淡出模块增强
 
-  将所有 Fading 类的功能移至[`FadeIn`](../reference/manim.animation.fading.FadeIn.html#manim.animation.fading.FadeIn "manim.animation.fading.FadeIn")和[`FadeOut`](../reference/manim.animation.fading.FadeOut.html#manim.animation.fading.FadeOut "manim.animation.fading.FadeOut")。所有其他褪色类已被弃用。
+  将所有 Fading 类的功能移至[`FadeIn`]()和[`FadeOut`]()。所有其他褪色类已被弃用。
 
-- [＃1375](https://github.com/ManimCommunity/manim/pull/1375)：删除了已弃用的内容`ShowCreation`以支持[`Create`](../reference/manim.animation.creation.Create.html#manim.animation.creation.Create "manim.animation.creation.Create")
+- [＃1375](https://github.com/ManimCommunity/manim/pull/1375)：删除了已弃用的内容`ShowCreation`以支持[`Create`]()
 
 ### 新功能
 
-- [＃1566](https://github.com/ManimCommunity/manim/pull/1566)：添加了将网格线添加到的功能[`Rectangle`](../reference/manim.mobject.geometry.polygram.Rectangle.html#manim.mobject.geometry.polygram.Rectangle "manim.mobject.geometry.polygram.矩形")
-- [#1548](https://github.com/ManimCommunity/manim/pull/1548)：添加了[`ArcBrace`](../reference/manim.mobject.svg.brace.ArcBrace.html#manim.mobject.svg.brace.ArcBrace "manim.mobject.svg.brace.ArcBrace")的子类[`Brace`](../reference/manim.mobject.svg.brace.Brace.html#manim.mobject.svg.brace.Brace "manim.mobject.svg.brace.Brace")。
+- [＃1566](https://github.com/ManimCommunity/manim/pull/1566)：添加了将网格线添加到的功能[`Rectangle`]()
+- [#1548](https://github.com/ManimCommunity/manim/pull/1548)：添加了[`ArcBrace`]()的子类[`Brace`]()。
 - [＃1559](https://github.com/ManimCommunity/manim/pull/1559)：更新 VGroup 以支持项目分配（＃1530）
 
   支持 VGroup 的索引项分配
 
 - [#1518](https://github.com/ManimCommunity/manim/pull/1518)：允许在一个动画中淡入多个 Mobject
-- [＃1422](https://github.com/ManimCommunity/manim/pull/1422)：添加[`override_animation()`](../reference/manim.animation.animation.html#manim.animation.animation.override_animation "manim.animation.animation.override_animation")装饰器
+- [＃1422](https://github.com/ManimCommunity/manim/pull/1422)：添加[`override_animation()`]()装饰器
 - [#1504](https://github.com/ManimCommunity/manim/pull/1504)：颜色模块增强
 
   - 替换`BLUE_E`为之前的内容`DARK_BLUE`并删除`DARK_BLUE`
@@ -72,14 +72,14 @@
 
 ### 增强功能
 
-- [#1572](https://github.com/ManimCommunity/manim/pull/1572)：通过元类实现 OpenGL 兼容性：[`TracedPath`](../reference/manim.animation.changing.TracedPath.html#manim.animation.changing.TracedPath "manim.animation.having.TracedPath")、、、[`ParametricFunction`](../reference/manim.mobject.graphing.functions.ParametricFunction.html#manim.mobject.graphing.functions.ParametricFunction "manim.mobject.graphing.functions.ParametricFunction")[`Brace`](../reference/manim.mobject.svg.brace.Brace.html#manim.mobject.svg.brace.Brace "manim.mobject.svg.brace.Brace")[`VGroup`](../reference/manim.mobject.types.vectorized_mobject.VGroup.html#manim.mobject.types.vectorized_mobject.VGroup "manim.mobject.types.vectorized_mobject.VGroup")
-- [#1472](https://github.com/ManimCommunity/manim/pull/1472) : 将方法从 移植`GraphScene`到[`CoordinateSystem`](../reference/manim.mobject.graphing.coordinate_systems.CoordinateSystem.html#manim.mobject.graphing.coordinate_systems.CoordinateSystem "manim.mobject.graphing.coordinate_systems.坐标系统")
-- [#1589](https://github.com/ManimCommunity/manim/pull/1589)：通过元类实现 OpenGL 兼容性：[`ValueTracker`](../reference/manim.mobject.value_tracker.ValueTracker.html#manim.mobject.value_tracker.ValueTracker "manim.mobject.value_tracker.ValueTracker")
+- [#1572](https://github.com/ManimCommunity/manim/pull/1572)：通过元类实现 OpenGL 兼容性：[`TracedPath`]()、、、[`ParametricFunction`]()[`Brace`]()[`VGroup`]()
+- [#1472](https://github.com/ManimCommunity/manim/pull/1472) : 将方法从 移植`GraphScene`到[`CoordinateSystem`]()
+- [#1589](https://github.com/ManimCommunity/manim/pull/1589)：通过元类实现 OpenGL 兼容性：[`ValueTracker`]()
 - [#1564](https://github.com/ManimCommunity/manim/pull/1564) : 为 TeX 编译错误添加额外注释
 
   `TexTemplate`添加提示以在 TeX 编译错误上使用自定义
 
-- [＃1584](https://github.com/ManimCommunity/manim/pull/1584)`0` ：添加了检查[`round_corners()`](../reference/manim.mobject.geometry.polygram.Polygram.html#manim.mobject.geometry.polygram.Polygram.round_corners "manim.mobject.geometry.polygram.Polygram.round_corners")
+- [＃1584](https://github.com/ManimCommunity/manim/pull/1584)`0` ：添加了检查[`round_corners()`]()
 - [#1586](https://github.com/ManimCommunity/manim/pull/1586) : 为所有`isinstance`出现的情况添加 OpenGLMobject 支持
 
   此 PR 在其余动画类和其他适当的地方增加了对 OpenGL 的支持。
@@ -97,7 +97,7 @@
 
 - [#1512](https://github.com/ManimCommunity/manim/pull/1512)：通过元类实现 OpenGL 兼容性：图
 - [#1511](https://github.com/ManimCommunity/manim/pull/1511)：通过元类实现 OpenGL 兼容性：svg_mobject、text_mobject、tex_mobject
-- [#1502](https://github.com/ManimCommunity/manim/pull/1502) : 添加`center`参数[`Sphere`](../reference/manim.mobject.three_d.three_dimensions.Sphere.html#manim.mobject.three_d.three_dimensions.Sphere "manim.mobject. Three_d. Three_dimensions.Sphere")和`point`参数[`Dot3D`](../reference/manim.mobject.three_d.three_dimensions.Dot3D.html#manim.mobject.three_d.three_dimensions.Dot3D "manim.mobject. Three_d. Three_dimensions.Dot3D")
+- [#1502](https://github.com/ManimCommunity/manim/pull/1502) : 添加`center`参数[`Sphere`]()和`point`参数[`Dot3D`]()
 - [第 1486 章](https://github.com/ManimCommunity/manim/pull/1486)更新`rate_functions`
 
   更改了非标准费率函数的图片。
@@ -138,29 +138,29 @@
 
 ### 与文档相关的更改
 
-- [＃1599](https://github.com/ManimCommunity/manim/pull/1599)：添加了示例[`Annulus`](../reference/manim.mobject.geometry.arc.Annulus.html#manim.mobject.geometry.arc.Annulus "manim.mobject.geometry.arc.Annulus")
+- [＃1599](https://github.com/ManimCommunity/manim/pull/1599)：添加了示例[`Annulus`]()
 - [#1415](https://github.com/ManimCommunity/manim/pull/1415)：画廊的新示例和一些文档的改进
 - [#1509](https://github.com/ManimCommunity/manim/pull/1509)：编辑文档
 
-  添加了指向 Manim 社区 GitHub 页面的链接`for_dev.rst`。修复[`get_start()`](../reference/manim.mobject.mobject.Mobject.html#manim.mobject.mobject.Mobject.get_start "manim.mobject.mobject.Mobject.get_start") 并添加了 将语言添加到代码块中的`roll`链接` building_blocks-rst``configuration.rst `
+  添加了指向 Manim 社区 GitHub 页面的链接`for_dev.rst`。修复[`get_start()`]() 并添加了 将语言添加到代码块中的`roll`链接` building_blocks-rst``configuration.rst `
 
 - [＃1384](https://github.com/ManimCommunity/manim/pull/1384)：向 space_ops.py 添加了类型
 
   为大多数函数添加了 Typehints
 
-- [#1500](https://github.com/ManimCommunity/manim/pull/1500)：示例[`apply_complex_function()`](../reference/manim.mobject.mobject.Mobject.html#manim.mobject.mobject.Mobject.apply_complex_function "manim.mobject.mobject.Mobject.apply_complex_function")
+- [#1500](https://github.com/ManimCommunity/manim/pull/1500)：示例[`apply_complex_function()`]()
 - [＃1551](https://github.com/ManimCommunity/manim/pull/1551)：修复了警告的拼写错误
 - [第 1550 章](https://github.com/ManimCommunity/manim/pull/1550)贡献部分的重组
 - [＃1541](https://github.com/ManimCommunity/manim/pull/1541)：修复损坏的链接和其他小文档问题
-- [＃1516](https://github.com/ManimCommunity/manim/pull/1516)`t_range` ：更新文档以代替`t_min`and`t_max`中使用[`ParametricFunction`](../reference/manim.mobject.graphing.functions.ParametricFunction.html#manim.mobject.graphing.functions.ParametricFunction "manim.mobject.graphing.functions.ParametricFunction")
+- [＃1516](https://github.com/ManimCommunity/manim/pull/1516)`t_range` ：更新文档以代替`t_min`and`t_max`中使用[`ParametricFunction`]()
 - [#1508](https://github.com/ManimCommunity/manim/pull/1508)：更新故障排除文档
-- [＃1485](https://github.com/ManimCommunity/manim/pull/1485)：添加了[`Title`](../reference/manim.mobject.text.tex_mobject.Title.html#manim.mobject.text.tex_mobject.Title "manim.mobject.text.tex_mobject.Title")文档示例
+- [＃1485](https://github.com/ManimCommunity/manim/pull/1485)：添加了[`Title`]()文档示例
 - [#1439](https://github.com/ManimCommunity/manim/pull/1439)：清理`Sequence`类型提示
 - [＃1440](https://github.com/ManimCommunity/manim/pull/1440)：添加了 Scoop 安装文档（Windows）
-- [＃1452](https://github.com/ManimCommunity/manim/pull/1452)：精炼类型提示[`Angle`](../reference/manim.mobject.geometry.line.Angle.html#manim.mobject.geometry.line.Angle "manim.mobject.geometry.line.Angle")
-- [#1458](https://github.com/ManimCommunity/manim/pull/1458)：细化文档[`Text`](../reference/manim.mobject.text.text_mobject.Text.html#manim.mobject.text.text_mobject.Text "manim.mobject.text.text_mobject.Text")（`disable_ligatures=True`为 t2c 添加）
-- [＃1449](https://github.com/ManimCommunity/manim/pull/1449)：添加[`PointCloudDot`](../reference/manim.mobject.types.point_cloud_mobject.PointCloudDot.html#manim.mobject.types.point_cloud_mobject.PointCloudDot "manim.mobject.types.point_cloud_mobject.PointCloudDot")示例
-- [＃1473](https://github.com/ManimCommunity/manim/pull/1473)：添加了简单的示例[`arrange_in_grid()`](../reference/manim.mobject.mobject.Mobject.html#manim.mobject.mobject.Mobject.arrange_in_grid "manim.mobject.mobject.Mobject.arrange_in_grid")
+- [＃1452](https://github.com/ManimCommunity/manim/pull/1452)：精炼类型提示[`Angle`]()
+- [#1458](https://github.com/ManimCommunity/manim/pull/1458)：细化文档[`Text`]()（`disable_ligatures=True`为 t2c 添加）
+- [＃1449](https://github.com/ManimCommunity/manim/pull/1449)：添加[`PointCloudDot`]()示例
+- [＃1473](https://github.com/ManimCommunity/manim/pull/1473)：添加了简单的示例[`arrange_in_grid()`]()
 - [＃1402](https://github.com/ManimCommunity/manim/pull/1402)：添加了类型字符串解析器检查器
 - [＃1451](https://github.com/ManimCommunity/manim/pull/1451)：降低 AngleExample 的复杂性
 - [#1441](https://github.com/ManimCommunity/manim/pull/1441) : 将继承图添加到参考页面
@@ -191,7 +191,7 @@
 
 ### 代码质量改进和类似的重构
 
-- [#1465](https://github.com/ManimCommunity/manim/pull/1465) : 为[`coordinate_systems`](../reference/manim.mobject.graphing.coordinate_systems.html#module-manim.mobject.graphing.coordinate_systems "manim.mobject.graphing.coordinate_systems").
+- [#1465](https://github.com/ManimCommunity/manim/pull/1465) : 为[`coordinate_systems`]().
 - [＃1552](https://github.com/ManimCommunity/manim/pull/1552)：删除几何中不需要的参数
 
   删除了`anchors_span_full_range`、`close_new_points`、`anchors_span_full_range`、`preserve_tip_size_when_scaling`和` mark_paths_closed``close_new_points `
