--- a/changelogs/0.9.0-changelog.md
+++ b/changelogs/0.9.0-changelog.md
@@ -4,24 +4,24 @@
 
 ### 亮点
 
-- [＃1677](https://github.com/ManimCommunity/manim/pull/1677)：添加了一个新的[`Table`](../reference/manim.mobject.table.Table.html#manim.mobject.table.Table "manim.mobject.table.Table")对象
+- [＃1677](https://github.com/ManimCommunity/manim/pull/1677)：添加了一个新的[`Table`]()对象
 
-  这为 Manim 带来了易于使用和可定制的表格。这个新 mobject 的几个示例可以在及其子页面中找到。[`the module documentation page`](../reference/manim.mobject.table.html#module-manim.mobject.table "manim.mobject.表")
+  这为 Manim 带来了易于使用和可定制的表格。这个新 mobject 的几个示例可以在及其子页面中找到。[`the module documentation page`]()
 
 ### 已弃用的类和函数
 
-- [#1848](https://github.com/ManimCommunity/manim/pull/1848) : 已弃用[`DashedLine`](../reference/manim.mobject.geometry.line.DashedLine.html#manim.mobject.geometry.line.DashedLine "manim.mobject.geometry.line.DashedLine")和 的参数[`DashedVMobject`](../reference/manim.mobject.types.vectorized_mobject.DashedVMobject.html#manim.mobject.types.vectorized_mobject.DashedVMobject "manim.mobject.types.vectorized_mobject.DashedVMobject")
+- [#1848](https://github.com/ManimCommunity/manim/pull/1848) : 已弃用[`DashedLine`]()和 的参数[`DashedVMobject`]()
 
   - `dash_spacing`是一个未使用的参数
   - `positive_space_ratio`已被替换为较短的名称`dashed_ratio`
 
 - [＃1773](https://github.com/ManimCommunity/manim/pull/1773)：删除所有已弃用的类和函数，`v0.7.0`直到`v0.8.0`
 
-  类`FadeInFrom`, `FadeOutAndShift`, `FadeOutToPoint`, `FadeInFromPoint`, `FadeInFromLarge`, `VFadeIn`, `VFadeOut`,`VFadeInThenOut`已被删除，请使用[`FadeIn`](../reference/manim.animation.fading.FadeIn.html#manim.animation.fading.FadeIn "manim.animation.fading.FadeIn")或[`FadeOut`](../reference/manim.animation.fading.FadeOut.html#manim.animation.fading.FadeOut "manim.animation.fading.FadeOut")与适当的关键字参数代替。
+  类`FadeInFrom`, `FadeOutAndShift`, `FadeOutToPoint`, `FadeInFromPoint`, `FadeInFromLarge`, `VFadeIn`, `VFadeOut`,`VFadeInThenOut`已被删除，请使用[`FadeIn`]()或[`FadeOut`]()与适当的关键字参数代替。
 
-  类`CircleIndicate`, `ShowCreationThenDestruction`, `AnimationOnSurroundingRectangle`, `ShowPassingFlashAround`, `ShowCreationThenDestructionAround`, `ShowCreationThenFadeAround`, `WiggleOutThenIn`,`TurnInsideOut`已被删除。使用[`Circumscribe`](../reference/manim.animation.indication.Circumscribe.html#manim.animation.indication.Circumscribe "manim.animation.indication.Circumscribe")、[`ShowPassingFlash`](../reference/manim.animation.indication.ShowPassingFlash.html#manim.animation.indication.ShowPassingFlash "manim.animation.inspiration.ShowPassingFlash")、 或[`Wiggle`](../reference/manim.animation.indication.Wiggle.html#manim.animation.indication.Wiggle "manim.animation.indication.Wiggle")代替。
+  类`CircleIndicate`, `ShowCreationThenDestruction`, `AnimationOnSurroundingRectangle`, `ShowPassingFlashAround`, `ShowCreationThenDestructionAround`, `ShowCreationThenFadeAround`, `WiggleOutThenIn`,`TurnInsideOut`已被删除。使用[`Circumscribe`]()、[`ShowPassingFlash`]()、 或[`Wiggle`]()代替。
 
-  类`OpenGLTexMobject`和`OpenGLTextMobject`已被删除，请使用[`MathTex`](../reference/manim.mobject.text.tex_mobject.MathTex.html#manim.mobject.text.tex_mobject.MathTex "manim.mobject.text.tex_mobject.MathTex")和[`Tex`](../reference/manim.mobject.text.tex_mobject.Tex.html#manim.mobject.text.tex_mobject.Tex "manim.mobject.text.tex_mobject.Tex")代替。另外，`VMobjectFromSVGPathstring`已删除，`SVGPathMobject`请改为使用。
+  类`OpenGLTexMobject`和`OpenGLTextMobject`已被删除，请使用[`MathTex`]()和[`Tex`]()代替。另外，`VMobjectFromSVGPathstring`已删除，`SVGPathMobject`请改为使用。
 
   最后，实用函数`get_norm`和`cross`已被删除（使用相应的 Numpy 方法代替），并且该函数`angle_between`已被替换为`angle_between_vectors`.
 
@@ -32,15 +32,15 @@
 
 ### 新功能
 
-- [#1780](https://github.com/ManimCommunity/manim/pull/1780) : 允许将非数字值添加到[`NumberLine`](../reference/manim.mobject.graphing.number_line.NumberLine.html#manim.mobject.graphing.number_line.NumberLine "manim.mobject.graphing.number_line.NumberLine")和[`Axes`](../reference/manim.mobject.graphing.coordinate_systems.Axes.html#manim.mobject.graphing.coordinate_systems.Axes "manim.mobject.graphing.coordinate_systems.Axes")
+- [#1780](https://github.com/ManimCommunity/manim/pull/1780) : 允许将非数字值添加到[`NumberLine`]()和[`Axes`]()
 
-  - 添加了接受位置/值字典的[`NumberLine.add_labels()`](../reference/manim.mobject.graphing.number_line.NumberLine.html#manim.mobject.graphing.number_line.NumberLine.add_labels "manim.mobject.graphing.number_line.NumberLine.add_labels")方法。[`NumberLine`](../reference/manim.mobject.graphing.number_line.NumberLine.html#manim.mobject.graphing.number_line.NumberLine "manim.mobject.graphing.number_line.NumberLine")
-  - [`CoordinateSystem.add_coordinates()`](../reference/manim.mobject.graphing.coordinate_systems.CoordinateSystem.html#manim.mobject.graphing.coordinate_systems.CoordinateSystem.add_coordinates "manim.mobject.graphing.coordinate_systems.CooperativeSystem.add_coordinates")现在也接受字典。
+  - 添加了接受位置/值字典的[`NumberLine.add_labels()`]()方法。[`NumberLine`]()
+  - [`CoordinateSystem.add_coordinates()`]()现在也接受字典。
 
-- [＃1719](https://github.com/ManimCommunity/manim/pull/1719)：添加了[`Broadcast`](../reference/manim.animation.specialized.Broadcast.html#manim.animation.specialized.Broadcast "manim.animation.specialized.Broadcast")动画
-- [#1765](https://github.com/ManimCommunity/manim/pull/1765) : 添加了一个静态方法[`Circle.from_three_points()`](../reference/manim.mobject.geometry.arc.Circle.html#manim.mobject.geometry.arc.Circle.from_three_points "manim.mobject.geometry.arc.Circle.from_ Three_points")，用于从三点定义圆
+- [＃1719](https://github.com/ManimCommunity/manim/pull/1719)：添加了[`Broadcast`](")动画
+- [#1765](https://github.com/ManimCommunity/manim/pull/1765) : 添加了一个静态方法[`Circle.from_three_points()`]()，用于从三点定义圆
 
-  - 添加了一个新[`perpendicular_bisector()`](../reference/manim.utils.space_ops.html#manim.utils.space_ops.perpendicular_bisector "manim.utils.space_ops.perpendillary_bisector")功能`space_ops.py`
+  - 添加了一个新[`perpendicular_bisector()`]()功能`space_ops.py`
 
 - [＃1686](https://github.com/ManimCommunity/manim/pull/1686)：添加`ParametricSurface.set_fill_by_value()`
 
@@ -48,12 +48,12 @@
 
 ### 增强功能
 
-- [#1833](https://github.com/ManimCommunity/manim/pull/1833)：添加了[`VDict`](../reference/manim.mobject.types.vectorized_mobject.VDict.html#manim.mobject.types.vectorized_mobject.VDict "manim.mobject.types.vectorized_mobject.VDict")、`get_line_graph()`和的 OpenGL 兼容性[`FocusOn`](../reference/manim.animation.indication.FocusOn.html#manim.animation.indication.FocusOn "manim.animation.indication.FocusOn")
+- [#1833](https://github.com/ManimCommunity/manim/pull/1833)：添加了[`VDict`]()、`get_line_graph()`和的 OpenGL 兼容性[`FocusOn`]()
 - [#1760](https://github.com/ManimCommunity/manim/pull/1760) : 添加了`window_size`手动调整 OpenGL 窗口大小的标志
 
   接受以下形式的元组：`x,y`。
 
-- [＃1823](https://github.com/ManimCommunity/manim/pull/1823)：重做[`DashedVMobject`](../reference/manim.mobject.types.vectorized_mobject.DashedVMobject.html#manim.mobject.types.vectorized_mobject.DashedVMobject "manim.mobject.types.vectorized_mobject.DashedVMobject")
+- [＃1823](https://github.com/ManimCommunity/manim/pull/1823)：重做[`DashedVMobject`]()
 
   重写逻辑以生成破折号
 
@@ -63,44 +63,44 @@
   - 改进了矢量化对象着色器的性能
   - 添加了作为场景一部分而不是 mobject 的更新程序
 
-- [#1787](https://github.com/ManimCommunity/manim/pull/1787)：[`DecimalNumber`](../reference/manim.mobject.text.numbers.DecimalNumber.html#manim.mobject.text.numbers.DecimalNumber "manim.mobject.text.numbers.DecimalNumber")对省略号应用颜色
+- [#1787](https://github.com/ManimCommunity/manim/pull/1787)：[`DecimalNumber`]()对省略号应用颜色
 
   当 DecimalNumber 中的 show_ellipsis 设置为 true 时，将颜色应用于点
 
-- [＃1775](https://github.com/ManimCommunity/manim/pull/1775)：让我们[`Create`](../reference/manim.animation.creation.Create.html#manim.animation.creation.Create "manim.animation.creation.Create")继续努力`OpenGLSurface`
+- [＃1775](https://github.com/ManimCommunity/manim/pull/1775)：让我们[`Create`](")继续努力`OpenGLSurface`
 - [＃1757](https://github.com/ManimCommunity/manim/pull/1757)：当有大量要散列的项目时添加了警告。
-- [#1774](https://github.com/ManimCommunity/manim/pull/1774) : 添加`reverse`参数[`Write`](../reference/manim.animation.creation.Write.html#manim.animation.creation.Write "manim.animation.creation.Write")
+- [#1774](https://github.com/ManimCommunity/manim/pull/1774) : 添加`reverse`参数[`Write`]()
 
 ### 修复了错误
 
-- [＃1722](https://github.com/ManimCommunity/manim/pull/1722)：`remover=True`修复[`AnimationGroup`](../reference/manim.animation.composition.AnimationGroup.html#manim.animation.composition.AnimationGroup "manim.animation.composition.AnimationGroup")
+- [＃1722](https://github.com/ManimCommunity/manim/pull/1722)：`remover=True`修复[`AnimationGroup`]()
 - [#1727](https://github.com/ManimCommunity/manim/pull/1727)：修复了一些热重载问题以及与 IDE 的兼容性
 
   - 修复了交互式嵌入问题，该问题在非 tty 终端上运行时会失败
   - 修复了由于第一个观察器未关闭而导致文件观察器在第二次运行后出错的问题
 
-- [#1844](https://github.com/ManimCommunity/manim/pull/1844) :[`Code`](../reference/manim.mobject.text.code_mobject.Code.html#manim.mobject.text.code_mobject.Code "manim.mobject.text.code_mobject.Code")使用 OpenGL 渲染器修复了过大的窗口
-- [＃1821](https://github.com/ManimCommunity/manim/pull/1821)：修复了有关的`frame_center`问题[`ThreeDScene`](../reference/manim.scene.three_d_scene.ThreeDScene.html#manim.scene.three_d_scene.ThreeDScene "manim.scene. Three_d_scene.ThreeDScene")
+- [#1844](https://github.com/ManimCommunity/manim/pull/1844) :[`Code`]()使用 OpenGL 渲染器修复了过大的窗口
+- [＃1821](https://github.com/ManimCommunity/manim/pull/1821)：修复了有关的`frame_center`问题[`ThreeDScene`]()
 
-  - `frame_center`现在更改[`ThreeDScene`](../reference/manim.scene.three_d_scene.ThreeDScene.html#manim.scene.three_d_scene.ThreeDScene "manim.scene. Three_d_scene.ThreeDScene")实际上会更改相机位置。
+  - `frame_center`现在更改[`ThreeDScene`]()实际上会更改相机位置。
   - `frame_center`现在可以正确渲染仅包含动画的动画。
   - `frame_center`一旦设置动画，就不会在原点创建黑点。
 
-- [＃1826](https://github.com/ManimCommunity/manim/pull/1826)：修复了缩放问题[`BarChart.change_bar_values()`](../reference/manim.mobject.graphing.probability.BarChart.html#manim.mobject.graphing.probability.BarChart.change_bar_values "manim.mobject.graphing.probability.BarChart.change_bar_values")
+- [＃1826](https://github.com/ManimCommunity/manim/pull/1826)：修复了缩放问题[`BarChart.change_bar_values()`]()
 - [#1839](https://github.com/ManimCommunity/manim/pull/1839)`.animate` ：允许使用 OpenGL 渲染器传递参数
-- [＃1791](https://github.com/ManimCommunity/manim/pull/1791)：[`set_z_index()`](../reference/manim.mobject.mobject.Mobject.html#manim.mobject.mobject.Mobject.set_z_index "manim.mobject.mobject.Mobject.set_z_index")现在设置所有子对象的`z_index`值
+- [＃1791](https://github.com/ManimCommunity/manim/pull/1791)：[`set_z_index()`]()现在设置所有子对象的`z_index`值
 - [＃1792](https://github.com/ManimCommunity/manim/pull/1792)：修复了使用 PNG 格式时导致试运行失败的错误
 - [＃1790](https://github.com/ManimCommunity/manim/pull/1790)：修复了导入`manimlib`
-- [#1782](https://github.com/ManimCommunity/manim/pull/1782)：修复了[`Tex`](../reference/manim.mobject.text.tex_mobject.Tex.html#manim.mobject.text.tex_mobject.Tex "manim.mobject.text.tex_mobject.Tex")OpenGL 渲染器无法正常工作的问题
-- [#1783](https://github.com/ManimCommunity/manim/pull/1783) : 修复`shuffle()`功能并添加[`invert()`](../reference/manim.mobject.mobject.Mobject.html#manim.mobject.mobject.Mobject.invert "manim.mobject.mobject.Mobject.invert")到 OpenGL
-- [#1786](https://github.com/ManimCommunity/manim/pull/1786) : 修复了[`DecimalNumber`](../reference/manim.mobject.text.numbers.DecimalNumber.html#manim.mobject.text.numbers.DecimalNumber "manim.mobject.text.numbers.DecimalNumber")位数变化时无法正常工作的问题
+- [#1782](https://github.com/ManimCommunity/manim/pull/1782)：修复了[`Tex`]()OpenGL 渲染器无法正常工作的问题
+- [#1783](https://github.com/ManimCommunity/manim/pull/1783) : 修复`shuffle()`功能并添加[`invert()`]()到 OpenGL
+- [#1786](https://github.com/ManimCommunity/manim/pull/1786) : 修复了[`DecimalNumber`]()位数变化时无法正常工作的问题
 - [#1763](https://github.com/ManimCommunity/manim/pull/1763) : 修复了无法在配置文件中设置某些 CLI 标志的问题
-- [＃1776](https://github.com/ManimCommunity/manim/pull/1776)：[`CoordinateSystem.get_riemann_rectangles()`](../reference/manim.mobject.graphing.coordinate_systems.CoordinateSystem.html#manim.mobject.graphing.coordinate_systems.CoordinateSystem.get_riemann_rectangles "manim.mobject.graphing.coordinate_systems.CooperativeSystem.get_riemann_rectangles")现在使用图形的范围而不是轴的范围
+- [＃1776](https://github.com/ManimCommunity/manim/pull/1776)：[`CoordinateSystem.get_riemann_rectangles()`]()现在使用图形的范围而不是轴的范围
 
   如果未指定范围，则 get_riemann_rectangles 仅在区域正确边界的情况下生成矩形
 
 - [#1770](https://github.com/ManimCommunity/manim/pull/1770)：重写`OpenGLMobject.put_start_and_end_on()`以在 3D 中正常工作
-- [#1736](https://github.com/ManimCommunity/manim/pull/1736) : 修复了[`LinearTransformationScene`](../reference/manim.scene.vector_space_scene.LinearTransformationScene.html#manim.scene.vector_space_scene.LinearTransformationScene "manim.scene.vector_space_scene.LinearTransformationScene")多个动画的崩溃问题
+- [#1736](https://github.com/ManimCommunity/manim/pull/1736) : 修复了[`LinearTransformationScene`]()多个动画的崩溃问题
 
 ### 与文档相关的更改
 
@@ -121,9 +121,9 @@
 - [＃1813](https://github.com/ManimCommunity/manim/pull/1813)：从教程中删除了未使用的变量
 - [＃1815](https://github.com/ManimCommunity/manim/pull/1815)：将 codespell 添加到贡献指南中使用的 linter 列表中
 - [#1778](https://github.com/ManimCommunity/manim/pull/1778) : 改进文档参考手册的侧边栏结构
-- [＃1749](https://github.com/ManimCommunity/manim/pull/1749)：添加了文档和示例[`VMobject.set_fill()`](../reference/manim.mobject.types.vectorized_mobject.VMobject.html#manim.mobject.types.vectorized_mobject.VMobject.set_fill "manim.mobject.types.vectorized_mobject.VMobject.set_fill")
+- [＃1749](https://github.com/ManimCommunity/manim/pull/1749)：添加了文档和示例[`VMobject.set_fill()`]()
 - [＃1743](https://github.com/ManimCommunity/manim/pull/1743)：编辑开发人员安装说明以包含有关克隆存储库的信息
-- [＃1706](https://github.com/ManimCommunity/manim/pull/1706)：返工示例[`Variable`](../reference/manim.mobject.text.numbers.Variable.html#manim.mobject.text.numbers.Variable "manim.mobject.text.numbers.Variable")
+- [＃1706](https://github.com/ManimCommunity/manim/pull/1706)：返工示例[`Variable`]()
 
 ### 有关测试系统的更改
 
@@ -138,7 +138,7 @@
 
 ### 代码质量改进和类似的重构
 
-- [第 1851](https://github.com/ManimCommunity/manim/pull/1851)`Tabular`章改名[`Table`](../reference/manim.mobject.table.Table.html#manim.mobject.table.Table "manim.mobject.table.Table")
+- [第 1851](https://github.com/ManimCommunity/manim/pull/1851)`Tabular`章改名[`Table`]()
 - [＃1817](https://github.com/ManimCommunity/manim/pull/1817)：删除枕头版本要求
 - [＃1806](https://github.com/ManimCommunity/manim/pull/1806)：修复拼写错误
 - [#1745](https://github.com/ManimCommunity/manim/pull/1745) : 将 README 中的 BibTeX 模板更新为 Manim v0.9.0
