--- a/changelogs/0.15.1-changelog.md
+++ b/changelogs/0.15.1-changelog.md
@@ -4,7 +4,7 @@
 
 ### 增强功能
 
-- [＃2602](https://github.com/ManimCommunity/manim/pull/2602)：支持团体[`TransformMatchingTex`](../reference/manim.animation.transform_matching_parts.TransformMatchingTex.html#manim.animation.transform_matching_parts.TransformMatchingTex "manim.animation.transform_matching_parts.TransformMatchingTex")
+- [＃2602](https://github.com/ManimCommunity/manim/pull/2602)：支持团体[`TransformMatchingTex`]()
 
 ### 修复了错误
 
@@ -15,13 +15,13 @@
 
 ### 与文档相关的更改
 
-- [#2570](https://github.com/ManimCommunity/manim/pull/2570) : 重构文档字符串[`coordinate_systems`](../reference/manim.mobject.graphing.coordinate_systems.html#module-manim.mobject.graphing.coordinate_systems "manim.mobject.graphing.coordinate_systems")
+- [#2570](https://github.com/ManimCommunity/manim/pull/2570) : 重构文档字符串[`coordinate_systems`]()
 - [＃2603](https://github.com/ManimCommunity/manim/pull/2603)：减少文档构建期间的警告数量
 
 ### 代码质量改进和类似的重构
 
-- [#2578](https://github.com/ManimCommunity/manim/pull/2578) : 修复了颜色属性的错误类型提示[`Text`](../reference/manim.mobject.text.text_mobject.Text.html#manim.mobject.text.text_mobject.Text "manim.mobject.text.text_mobject.Text")
+- [#2578](https://github.com/ManimCommunity/manim/pull/2578) : 修复了颜色属性的错误类型提示[`Text`]()
 
-### 新发布[#](#new-releases "此标题的固定链接")
+### 新发布
 
 - [#2596](https://github.com/ManimCommunity/manim/pull/2596)：准备了错误修复版本 v0.15.1
