--- a/changelogs/0.17.1-changelog.md
+++ b/changelogs/0.17.1-changelog.md
@@ -5,11 +5,11 @@
 ### 修复了错误
 
 - [#3061](https://github.com/ManimCommunity/manim/pull/3061)：`/`调用 LaTeX 时始终使用扩展文件路径
-- [＃3062](https://github.com/ManimCommunity/manim/pull/3062)：添加了 Unicode 编码[`Scene.add_subcaption()`](../reference/manim.scene.scene.Scene.html#manim.scene.scene.Scene.add_subcaption "manim.scene.scene.Scene.add_subcaption")
+- [＃3062](https://github.com/ManimCommunity/manim/pull/3062)：添加了 Unicode 编码[`Scene.add_subcaption()`]()
 
 ### 与文档相关的更改
 
-- [＃2953](https://github.com/ManimCommunity/manim/pull/2953)：添加了滞后动画的文档[`animation.composition`](../reference/manim.animation.composition.html#module-manim.animation.composition "manim.animation.composition")
+- [＃2953](https://github.com/ManimCommunity/manim/pull/2953)：添加了滞后动画的文档[`animation.composition`]()
 
 ### 代码质量改进和类似的重构
 
