--- a/changelogs/0.2.0-changelog.md
+++ b/changelogs/0.2.0-changelog.md
@@ -35,37 +35,37 @@
 
 ## 新功能
 
-- 添加了创建动画[`ManimBanner`](../reference/manim.mobject.logo.ManimBanner.html#manim.mobject.logo.ManimBanner "manim.mobject.logo.ManimBanner")（[#814](https://github.com/ManimCommunity/manim/pull/814)）
-- 添加了一些文档[`construct()`](../reference/manim.scene.scene.Scene.html#manim.scene.scene.Scene.construct "manim.scene.scene.Scene.construct")( [#753](https://github.com/ManimCommunity/manim/pull/753) )
+- 添加了创建动画[`ManimBanner`]()（[#814](https://github.com/ManimCommunity/manim/pull/814)）
+- 添加了一些文档[`construct()`]()( [#753](https://github.com/ManimCommunity/manim/pull/753) )
 - 添加了 Manim 标志的黑白单色版本（[#826](https://github.com/ManimCommunity/manim/pull/826)）
 - 添加了对插件系统的支持（子命令+文档）（[#784](https://github.com/ManimCommunity/manim/pull/784)）`manim plugin`[](https://github.com/ManimCommunity/manim/pull/784)
-- 实现了`__add__`, `__iadd__`, `__sub__`, 和`__isub__`for [`Mobject`](../reference/manim.mobject.mobject.Mobject.html#manim.mobject.mobject.Mobject "manim.mobject.mobject.Mobject")（允许像这样的符号） ( [#790](https://github.com/ManimCommunity/manim/pull/790) )`some_vgroup + some_mobject`[](https://github.com/ManimCommunity/manim/pull/790)
+- 实现了`__add__`, `__iadd__`, `__sub__`, 和`__isub__`for [`Mobject`]()（允许像这样的符号） ( [#790](https://github.com/ManimCommunity/manim/pull/790) )`some_vgroup + some_mobject`[](https://github.com/ManimCommunity/manim/pull/790)
 - 为库中的多个文件添加了类型提示（[#835](https://github.com/ManimCommunity/manim/pull/835)）
-- 添加了一些示例[`creation`](../reference/manim.animation.creation.html#module-manim.animation.creation "动画创作")（[#820](https://github.com/ManimCommunity/manim/pull/820)）
-- 添加了一些示例和[`DashedLine`](../reference/manim.mobject.geometry.line.DashedLine.html#manim.mobject.geometry.line.DashedLine "manim.mobject.geometry.line.DashedLine")( [`CurvesAsSubmobjects`](../reference/manim.mobject.types.vectorized_mobject.CurvesAsSubmobjects.html#manim.mobject.types.vectorized_mobject.CurvesAsSubmobjects "manim.mobject.types.vectorized_mobject.CurvesAsSubmobjects")\# [833](https://github.com/ManimCommunity/manim/pull/833) )
-- 添加了使用 Pango 渲染的文本的新实现[`MarkupText`](../reference/manim.mobject.text.text_mobject.MarkupText.html#manim.mobject.text.text_mobject.MarkupText "manim.mobject.text.text_mobject.MarkupText")，可以使用类似 HTML 的语法进行格式化（[#855](https://github.com/ManimCommunity/manim/pull/855)）
+- 添加了一些示例[`creation`]()（[#820](https://github.com/ManimCommunity/manim/pull/820)）
+- 添加了一些示例和[`DashedLine`]()( [`CurvesAsSubmobjects`]()\# [833](https://github.com/ManimCommunity/manim/pull/833) )
+- 添加了使用 Pango 渲染的文本的新实现[`MarkupText`]()，可以使用类似 HTML 的语法进行格式化（[#855](https://github.com/ManimCommunity/manim/pull/855)）
 - 添加了淡入和淡出示例以及弃用和`FadeInFromDown`( `FadeOutAndShiftDown`\# [827](https://github.com/ManimCommunity/manim/pull/827) )
 - [`MoveAlongPath`](../reference/manim.animation.movement.MoveAlongPath.html#manim.animation.movement.MoveAlongPath "manim.animation.movement.MoveAlongPath")在文档中添加了示例( [#873](https://github.com/ManimCommunity/manim/pull/873) )
 - 添加了其他角度的环境旋转 \- theta、phi、gamma ( [#660](https://github.com/ManimCommunity/manim/pull/660) )
 - 使用 Pango 的自定义绑定（[#878](https://github.com/ManimCommunity/manim/pull/878)）
-- 添加了[`Graph`](../reference/manim.mobject.graph.Graph.html#manim.mobject.graph.Graph "manim.mobject.graph.Graph")（图论）图的基本实现（[#861](https://github.com/ManimCommunity/manim/pull/861)）
-- 在（[#889](https://github.com/ManimCommunity/manim/pull/889)）中使用新`.animate`语法时允许链接方法[`play()`](../reference/manim.scene.scene.Scene.html#manim.scene.scene.Scene.play "manim.场景.场景.场景.play")[](https://github.com/ManimCommunity/manim/pull/889)
+- 添加了[`Graph`]()（图论）图的基本实现（[#861](https://github.com/ManimCommunity/manim/pull/861)）
+- 在（[#889](https://github.com/ManimCommunity/manim/pull/889)）中使用新`.animate`语法时允许链接方法[`play()`]()[](https://github.com/ManimCommunity/manim/pull/889)
 
 ## 错误修复
 
 - 修复 .rst 文件中的文档测试 ( [#797](https://github.com/ManimCommunity/manim/pull/797) )
 - 修复添加子命令后失败的 doctest ( [#831](https://github.com/ManimCommunity/manim/pull/831) )`manim plugin`[](https://github.com/ManimCommunity/manim/pull/831)
 - `always_shift()`标准化( [#839](https://github.com/ManimCommunity/manim/pull/839) )中的方向向量
-- 添加`disable_ligatures`到[`Text`](../reference/manim.mobject.text.text_mobject.Text.html#manim.mobject.text.text_mobject.Text "manim.mobject.text.text_mobject.Text")（通过[#804](https://github.com/ManimCommunity/manim/pull/804)）
+- 添加`disable_ligatures`到[`Text`]()（通过[#804](https://github.com/ManimCommunity/manim/pull/804)）
 - 使场景缓存了解 Mobject 的顺序（[#845](https://github.com/ManimCommunity/manim/pull/845)）
 - 修复`CairoText`以使用新的配置结构（[#858](https://github.com/ManimCommunity/manim/pull/858)）
-- 向继承自[`Matrix`](../reference/manim.mobject.matrix.Matrix.html#manim.mobject.matrix.Matrix "manim.mobject.matrix.Matrix")（[#859](https://github.com/ManimCommunity/manim/pull/859)）的类添加了缺少的参数
+- 向继承自[`Matrix`]()（[#859](https://github.com/ManimCommunity/manim/pull/859)）的类添加了缺少的参数
 - 修复：`z_index`包含在其他对象中作为子对象的对象现在得到了适当的尊重（[#872](https://github.com/ManimCommunity/manim/pull/872)）
 - 让`set_fill_by_checkboard()`返回修改后的表面以允许方法链接（[#883](https://github.com/ManimCommunity/manim/pull/883)）
 - 在更新程序期间添加的 Mobject 被添加到`Scene.moving_mobjects`( [#838](https://github.com/ManimCommunity/manim/pull/838) )
 - 将背景颜色传递给 JS 渲染器 ( [#876](https://github.com/ManimCommunity/manim/pull/876) )
 - 对文档字符串的小修复。小清理。删除`digest_mobject_attrs`. （[#834](https://github.com/ManimCommunity/manim/pull/834)）
-- 添加了闭合形状检测，[`DashedVMobject`](../reference/manim.mobject.types.vectorized_mobject.DashedVMobject.html#manim.mobject.types.vectorized_mobject.DashedVMobject "manim.mobject.types.vectorized_mobject.DashedVMobject")以实现均匀的虚线图案（[#884](https://github.com/ManimCommunity/manim/pull/884)）
+- 添加了闭合形状检测，[`DashedVMobject`]()以实现均匀的虚线图案（[#884](https://github.com/ManimCommunity/manim/pull/884)）
 - 修复整个库中文档字符串和变量的拼写（[#890](https://github.com/ManimCommunity/manim/pull/890)）
 
 ## 其他变化
@@ -75,7 +75,7 @@
 - 让 ffmpeg 直接渲染部分电影文件而不是临时文件（[#817](https://github.com/ManimCommunity/manim/pull/817)）
 - `manimce`自述文件中的 Manim 并`manim`大写 ( [#794](https://github.com/ManimCommunity/manim/pull/794) )
 - 添加了不同文档字符串类别的流程图（[#828](https://github.com/ManimCommunity/manim/pull/828)）
-- 改进模块文档字符串中的示例[`creation`](../reference/manim.animation.creation.html#module-manim.animation.creation "动画创作")+显式记录 buff 参数[`arrange()`](../reference/manim.mobject.mobject.Mobject.html#manim.mobject.mobject.Mobject.arrange "manim.mobject.mobject.Mobject.arrange")（[#825](https://github.com/ManimCommunity/manim/pull/825)）
+- 改进模块文档字符串中的示例[`creation`]()+显式记录 buff 参数[`arrange()`]()（[#825](https://github.com/ManimCommunity/manim/pull/825)）
 - 禁用 Python 3.6 的 CI 管道 ( [#823](https://github.com/ManimCommunity/manim/pull/823) )
 - 更新文档中的 URL ( [#832](https://github.com/ManimCommunity/manim/pull/832) )
 - 将即将发布的变更日志移至 GitHub-wiki ( [#822](https://github.com/ManimCommunity/manim/pull/822) )
