--- a/changelogs/0.5.0-changelog.md
+++ b/changelogs/0.5.0-changelog.md
@@ -21,19 +21,19 @@
 
 ### 新功能
 
-- [#1037](https://github.com/ManimCommunity/manim/pull/1037) :从 3b1b/manim 添加了新的淡入淡出和变换动画 ( [`TransformMatchingShapes`](../reference/manim.animation.transform_matching_parts.TransformMatchingShapes.html#manim.animation.transform_matching_parts.TransformMatchingShapes "manim.animation.transform_matching_parts.TransformMatchingShapes"), [`TransformMatchingTex`](../reference/manim.animation.transform_matching_parts.TransformMatchingTex.html#manim.animation.transform_matching_parts.TransformMatchingTex "manim.animation.transform_matching_parts.TransformMatchingTex"), )[`FadeTransform`](../reference/manim.animation.transform.FadeTransform.html#manim.animation.transform.FadeTransform "manim.animation.transform.FadeTransform")
+- [#1037](https://github.com/ManimCommunity/manim/pull/1037) :从 3b1b/manim 添加了新的淡入淡出和变换动画 ( [`TransformMatchingShapes`](), [`TransformMatchingTex`](), )[`FadeTransform`]()
 
   添加了新的淡入淡出动画：`FadeOutToPoint` 添加`FadeTransform`并`FadeTransformPieces`用于使用淡入淡出变换 mobjects 和子对象 添加`TransformMatchingShapes`并`TransformMatchingTex`用于变换具有匹配部分的 mobjects 和 tex
 
-- [#1097](https://github.com/ManimCommunity/manim/pull/1097)：添加了 3D Mobject[`Dot3D`](../reference/manim.mobject.three_d.three_dimensions.Dot3D.html#manim.mobject.three_d.three_dimensions.Dot3D "manim.mobject. Three_d. Three_dimensions.Dot3D")
+- [#1097](https://github.com/ManimCommunity/manim/pull/1097)：添加了 3D Mobject[`Dot3D`]()
 - [#1074](https://github.com/ManimCommunity/manim/pull/1074) : 在配置中添加了 jupyter media_width 选项
-- [#1107](https://github.com/ManimCommunity/manim/pull/1107) : 添加[`Unwrite`](../reference/manim.animation.creation.Unwrite.html#manim.animation.creation.Unwrite "manim.animation.creation.Unwrite")动画类来补充[`Write`](../reference/manim.animation.creation.Write.html#manim.animation.creation.Write "manim.animation.creation.Write")
+- [#1107](https://github.com/ManimCommunity/manim/pull/1107) : 添加[`Unwrite`]()动画类来补充[`Write`]()
 
-  添加了`Unwrite`继承自[`Write`](../reference/manim.animation.creation.Write.html#manim.animation.creation.Write "manim.animation.creation.Write"). 它通过传递反向速率函数自动反转动画[`Write`](../reference/manim.animation.creation.Write.html#manim.animation.creation.Write "manim.animation.creation.Write")，但它还需要一个额外的布尔参数反向，如果为 False，则从左到右渲染动画（假设文本以通常的方式定向），但如果为 True，则渲染右到左。
+  添加了`Unwrite`继承自[`Write`](). 它通过传递反向速率函数自动反转动画[`Write`]()，但它还需要一个额外的布尔参数反向，如果为 False，则从左到右渲染动画（假设文本以通常的方式定向），但如果为 True，则渲染右到左。
 
-- [＃1085](https://github.com/ManimCommunity/manim/pull/1085)：添加[`Angle`](../reference/manim.mobject.geometry.line.Angle.html#manim.mobject.geometry.line.Angle "manim.mobject.geometry.line.Angle")和[`RightAngle`](../reference/manim.mobject.geometry.line.RightAngle.html#manim.mobject.geometry.line.RightAngle "manim.mobject.geometry.line.RightAngle")用于相交线
+- [＃1085](https://github.com/ManimCommunity/manim/pull/1085)：添加[`Angle`]()和[`RightAngle`]()用于相交线
 
-  [`Angle`](../reference/manim.mobject.geometry.line.Angle.html#manim.mobject.geometry.line.Angle "manim.mobject.geometry.line.Angle")两者[`RightAngle`](../reference/manim.mobject.geometry.line.RightAngle.html#manim.mobject.geometry.line.RightAngle "manim.mobject.geometry.line.RightAngle")都接受两行作为输入。如果它们相交或共享一个公共顶点，则会在它们之间绘制一个角度。用户可以自定义角度的外观，也可以使用点直角。
+  [`Angle`]()两者[`RightAngle`]()都接受两行作为输入。如果它们相交或共享一个公共顶点，则会在它们之间绘制一个角度。用户可以自定义角度的外观，也可以使用点直角。
 
 ### 增强功能
 
@@ -66,18 +66,18 @@
 
 ### 修复了错误
 
-- [＃1224](https://github.com/ManimCommunity/manim/pull/1224)：固定[`ShowIncreasingSubsets`](../reference/manim.animation.creation.ShowIncreasingSubsets.html#manim.animation.creation.ShowIncreasingSubsets "manim.animation.creation.ShowIncreasingSubsets")，，[`ShowSubmobjectsOneByOne`](../reference/manim.animation.creation.ShowSubmobjectsOneByOne.html#manim.animation.creation.ShowSubmobjectsOneByOne "manim.animation.creation.ShowSubmobjectsOneByOne")和[`AddTextLetterByLetter`](../reference/manim.animation.creation.AddTextLetterByLetter.html#manim.animation.creation.AddTextLetterByLetter "manim.animation.creation.AddTextLetterByLetter")
+- [＃1224](https://github.com/ManimCommunity/manim/pull/1224)：固定[`ShowIncreasingSubsets`]()，，[`ShowSubmobjectsOneByOne`]()和[`AddTextLetterByLetter`]()
 - [#1201](https://github.com/ManimCommunity/manim/pull/1201)：防止`embed()`空场景崩溃
 - [#1192](https://github.com/ManimCommunity/manim/pull/1192) : 修复了缓存动画时，manim 无法合并部分影片文件的问题。
-- [＃1193](https://github.com/ManimCommunity/manim/pull/1193)：修复了在[`Animation`](../reference/manim.animation.animation.Animation.html#manim.animation.animation.Animation "manim.animation.animation.Animation")没有孩子的[`Mobject`](../reference/manim.mobject.mobject.Mobject.html#manim.mobject.mobject.Mobject "manim.mobject.mobject.Mobject")情况下使用[`AnimationGroup`](../reference/manim.animation.composition.AnimationGroup.html#manim.animation.composition.AnimationGroup "manim.animation.composition.AnimationGroup")
+- [＃1193](https://github.com/ManimCommunity/manim/pull/1193)：修复了在[`Animation`]()没有孩子的[`Mobject`]()情况下使用[`AnimationGroup`]()
 
   AnimationGroup 现在可以采用没有子 Mobject 的 Animation 对象，例如 Wait。
 
 - [#1170](https://github.com/ManimCommunity/manim/pull/1170) : 修复了 SVG 解析的小错误
 - [#1159](https://github.com/ManimCommunity/manim/pull/1159)：添加了对同一 SVG 元素中的多个变换的支持
-- [#1156](https://github.com/ManimCommunity/manim/pull/1156)：修复[`DrawBorderThenFill`](../reference/manim.animation.creation.DrawBorderThenFill.html#manim.animation.creation.DrawBorderThenFill "manim.animation.creation.DrawBorderThenFill")以支持 OpenGL 并改进了某些函数的类型提示
+- [#1156](https://github.com/ManimCommunity/manim/pull/1156)：修复[`DrawBorderThenFill`]()以支持 OpenGL 并改进了某些函数的类型提示
 
-  [`DrawBorderThenFill`](../reference/manim.animation.creation.DrawBorderThenFill.html#manim.animation.creation.DrawBorderThenFill "manim.animation.creation.DrawBorderThenFill")修复了一个导致[`Write`](../reference/manim.animation.creation.Write.html#manim.animation.creation.Write "manim.animation.creation.Write")动画无法使用的错误`OpenGLVMobjects`，并稍微改进了一些动画函数的类型提示`OpenGLVMobject`。
+  [`DrawBorderThenFill`]()修复了一个导致[`Write`]()动画无法使用的错误`OpenGLVMobjects`，并稍微改进了一些动画函数的类型提示`OpenGLVMobject`。
 
 - [＃1134](https://github.com/ManimCommunity/manim/pull/1134)：修复了-a 标志。
 
@@ -87,9 +87,9 @@
 
   修复了未定义的变量并转换`Mobject`为`OpenGLMobject`. 另外，修复了`ApplyMethod`.
 
-- [＃1092](https://github.com/ManimCommunity/manim/pull/1092)：重构 cocod_systems.py，修复错误，添加[`NumberPlane`](../reference/manim.mobject.graphing.coordinate_systems.NumberPlane.html#manim.mobject.graphing.coordinate_systems.NumberPlane "manim.mobject.graphing.coordinate_systems.NumberPlane")测试
+- [＃1092](https://github.com/ManimCommunity/manim/pull/1092)：重构 cocod_systems.py，修复错误，添加[`NumberPlane`]()测试
 
-  的默认行为[`rotate()`](../reference/manim.mobject.mobject.Mobject.html#manim.mobject.mobject.Mobject.rotate "manim.mobject.mobject.Mobject.旋转")是围绕 的中心旋转[`Mobject`](../reference/manim.mobject.mobject.Mobject.html#manim.mobject.mobject.Mobject "manim.mobject.mobject.Mobject")。仅当==[`NumberLine`](../reference/manim.mobject.graphing.number_line.NumberLine.html#manim.mobject.graphing.number_line.NumberLine "manim.mobject.graphing.number_line.NumberLine")时才关于数字 0 处的点对称。理想情况下，旋转应与线上编号 0 的点重合。` |x_min|``|x_max| `
+  的默认行为[`rotate()`]()是围绕 的中心旋转[`Mobject`]()。仅当==[`NumberLine`]()时才关于数字 0 处的点对称。理想情况下，旋转应与线上编号 0 的点重合。` |x_min|``|x_max| `
 
   添加了回归测试并另外修复了[#718](https://github.com/ManimCommunity/manim/pull/718)中引入的一些错误。
 
@@ -97,18 +97,18 @@
 
   使用 rich 的打印回溯，并修复了调用 manim –version 时两次打印版本的问题。
 
-- [＃1086](https://github.com/ManimCommunity/manim/pull/1086)：修复了断线间距[`Text`](../reference/manim.mobject.text.text_mobject.Text.html#manim.mobject.text.text_mobject.Text "manim.mobject.text.text_mobject.Text")
+- [＃1086](https://github.com/ManimCommunity/manim/pull/1086)：修复了断线间距[`Text`]()
 
   创建 Mobject 时缺少 line_spacing kwarg `Text`；这添加了它。
 
-- [＃1083](https://github.com/ManimCommunity/manim/pull/1083)：修正了形状[`Torus`](../reference/manim.mobject.three_d.three_dimensions.Torus.html#manim.mobject.three_d.three_dimensions.Torus "manim.mobject. Three_d. Three_dimensions.Torus")
+- [＃1083](https://github.com/ManimCommunity/manim/pull/1083)：修正了形状[`Torus`]()
 
   `Torus`当 minor_radius 不等于 1 时，绘制一个具有椭圆形横截面的曲面。此 PR 确保横截面始终是圆形。
 
 ### 与文档相关的更改
 
 - [#1217](https://github.com/ManimCommunity/manim/pull/1217)：在我们的文档中复制编辑了有关测试的文档
-- [#1206](https://github.com/ManimCommunity/manim/pull/1206) : 添加文档字符串[`Mobject`](../reference/manim.mobject.mobject.Mobject.html#manim.mobject.mobject.Mobject "manim.mobject.mobject.Mobject")
+- [#1206](https://github.com/ManimCommunity/manim/pull/1206) : 添加文档字符串[`Mobject`]()
 - [#1218](https://github.com/ManimCommunity/manim/pull/1218) : 从示例库中删除了 BezierSpline
 - [#1219](https://github.com/ManimCommunity/manim/pull/1219)：更新了 Dockerfile（包括构建文档的依赖项），将文档移至主自述文件
 - [#1209](https://github.com/ManimCommunity/manim/pull/1209) : 添加 :ref_methods: 到 manim 指令
@@ -117,7 +117,7 @@
 
 - [＃1204](https://github.com/ManimCommunity/manim/pull/1204)：将旋转示例添加到示例库
 - [#1137](https://github.com/ManimCommunity/manim/pull/1137)：添加了有关向 Sphinx 文档添加测试/文档的 GitHub Wiki 页面
-- [#1114](https://github.com/ManimCommunity/manim/pull/1114)：添加了[`Ellipse`](../reference/manim.mobject.geometry.arc.Ellipse.html#manim.mobject.geometry.arc.Ellipse "manim.mobject.geometry.arc.Ellipse")、[`Polygon`](../reference/manim.mobject.geometry.polygram.Polygon.html#manim.mobject.geometry.polygram.Polygon "manim.mobject.geometry.polygram.Polygon")、[`RegularPolygon`](../reference/manim.mobject.geometry.polygram.RegularPolygon.html#manim.mobject.geometry.polygram.RegularPolygon "manim.mobject.geometry.polygram.RegularPolygon")和[`Triangle`](../reference/manim.mobject.geometry.polygram.Triangle.html#manim.mobject.geometry.polygram.Triangle "manim.mobject.geometry.polygram.Triangle")的示例[`RoundedRectangle`](../reference/manim.mobject.geometry.polygram.RoundedRectangle.html#manim.mobject.geometry.polygram.RoundedRectangle "manim.mobject.geometry.polygram.RoundedRectangle")
+- [#1114](https://github.com/ManimCommunity/manim/pull/1114)：添加了[`Ellipse`]()、[`Polygon`]()、[`RegularPolygon`]()和[`Triangle`]()的示例[`RoundedRectangle`]()
 - [#1195](https://github.com/ManimCommunity/manim/pull/1195) : 从示例中删除了 SmallDot
 - [#1130](https://github.com/ManimCommunity/manim/pull/1130)：添加了运行 black 和 flake8 的预提交，相应更新了贡献文档
 - [#1138](https://github.com/ManimCommunity/manim/pull/1138) : 将以前版本的变更日志移动到单独的文件中；添加了一个脚本来生成未来的变更日志
@@ -127,13 +127,13 @@
 - [#1190](https://github.com/ManimCommunity/manim/pull/1190)：在贡献指南中添加注释以阅读最新版本的文档
 - [#1188](https://github.com/ManimCommunity/manim/pull/1188) : 在文档中添加了声音示例
 - [#1165](https://github.com/ManimCommunity/manim/pull/1165)：添加了在 Colab 上安装 Manim 的文档
-- [#1128](https://github.com/ManimCommunity/manim/pull/1128)：添加了[`DashedLine`](../reference/manim.mobject.geometry.line.DashedLine.html#manim.mobject.geometry.line.DashedLine "manim.mobject.geometry.line.DashedLine"), [`TangentLine`](../reference/manim.mobject.geometry.line.TangentLine.html#manim.mobject.geometry.line.TangentLine "manim.mobject.geometry.line.TangentLine"), [`Elbow`](../reference/manim.mobject.geometry.line.Elbow.html#manim.mobject.geometry.line.Elbow "manim.mobject.geometry.line.Elbow"), [`Arrow`](../reference/manim.mobject.geometry.line.Arrow.html#manim.mobject.geometry.line.Arrow "manim.mobject.geometry.line.Arrow"), [`Vector`](../reference/manim.mobject.geometry.line.Vector.html#manim.mobject.geometry.line.Vector "manim.mobject.geometry.line.Vector"),的示例[`DoubleArrow`](../reference/manim.mobject.geometry.line.DoubleArrow.html#manim.mobject.geometry.line.DoubleArrow "manim.mobject.geometry.line.DoubleArrow")
+- [#1128](https://github.com/ManimCommunity/manim/pull/1128)：添加了[`DashedLine`](), [`TangentLine`](), [`Elbow`](), [`Arrow`](), [`Vector`](),的示例[`DoubleArrow`]()
 - [#1177](https://github.com/ManimCommunity/manim/pull/1177) : 将最新版本文档的链接替换为稳定版本
 - [＃1077](https://github.com/ManimCommunity/manim/pull/1077)：添加了详细信息`get_critical_point()`
 - [#1154](https://github.com/ManimCommunity/manim/pull/1154)：修复了一些输入提示。（整数转浮点数）
-- [#1036](https://github.com/ManimCommunity/manim/pull/1036) : 添加[`SurroundingRectangle`](../reference/manim.mobject.geometry.shape_matchers.SurroundingRectangle.html#manim.mobject.geometry.shape_matchers.SurroundingRectangle "manim.mobject.geometry.shape_matchers.SurroundingRectangle")到示例库
+- [#1036](https://github.com/ManimCommunity/manim/pull/1036) : 添加[`SurroundingRectangle`]()到示例库
 - [#1103](https://github.com/ManimCommunity/manim/pull/1103)：添加了方形、点、圆形和矩形的文档和示例
-- [＃1101](https://github.com/ManimCommunity/manim/pull/1101)：添加文档[`Mobject`](../reference/manim.mobject.mobject.Mobject.html#manim.mobject.mobject.Mobject "manim.mobject.mobject.Mobject")
+- [＃1101](https://github.com/ManimCommunity/manim/pull/1101)：添加文档[`Mobject`]()
 - [#1088](https://github.com/ManimCommunity/manim/pull/1088) : 在文档和导入中添加了新的 svg 文件
 
   特别是，SVGPathMobject、VMobjectFromPathstring 和 style_utils 函数作用于 manim 的命名空间。
@@ -166,12 +166,12 @@
 
 ### 代码质量改进和类似的重构
 
-- [第＃ 1167](https://github.com/ManimCommunity/manim/pull/1167)`OpenGLMobject`章合并[`Mobject`](../reference/manim.mobject.mobject.Mobject.html#manim.mobject.mobject.Mobject "manim.mobject.mobject.Mobject")
+- [第＃ 1167](https://github.com/ManimCommunity/manim/pull/1167)`OpenGLMobject`章合并[`Mobject`]()
 - [#1164](https://github.com/ManimCommunity/manim/pull/1164) : 修复了 cairo_renderer.py 中的单一 PEP8 样式
 - [#1140](https://github.com/ManimCommunity/manim/pull/1140)：Flake8 兼容性和代码清理
-- [＃1019](https://github.com/ManimCommunity/manim/pull/1019)：重构[`play()`](../reference/manim.scene.scene.Scene.html#manim.scene.scene.Scene.play "manim.场景.场景.场景.play")
+- [＃1019](https://github.com/ManimCommunity/manim/pull/1019)：重构[`play()`]()
 
-  - 删除了 的 _**三个**_ 装饰器[`play()`](../reference/manim.scene.scene.Scene.html#manim.scene.scene.Scene.play "manim.场景.场景.场景.play")，特别是：缓存逻辑和文件编写器逻辑现在包含在其中[`play()`](../reference/manim.scene.scene.Scene.html#manim.scene.scene.Scene.play "manim.场景.场景.场景.play")（以前这是不可能的，因为 scene.wait 和 scene.play 是两个不同的东西）。
+  - 删除了 的 _**三个**_ 装饰器[`play()`]()，特别是：缓存逻辑和文件编写器逻辑现在包含在其中[`play()`]()（以前这是不可能的，因为 scene.wait 和 scene.play 是两个不同的东西）。
   - 为 Wait 添加了 is_static_wait 属性。（<=\> 如果 wait 是冻结帧）。
   - 重命名 scene.add_static_frame 并将其移动到 renderer.freeze_current_frame。
   - 现在，当调用不带动画的播放时，它会引发 ValueError 而不仅仅是警告。
